--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -40,27 +40,35 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 {{trans-top|digestive organ}}
 * Afrikaans: {{t-|af|maag}}
 * Albanian: {{t-|sq|stomak}}
+* {{trreq|am}}
 * Arabic: {{t-|ar|معدة|f|tr=máʿida, míʿda}}
+* {{trreq|an}}
 * Aramaic:
 *: Syriac: [[ܐܣܛܘܡܟܐ]] (’isṬōmkā’) {{m}}
 * Armenian: {{t-|hy|ստամոքս|tr=stamok's}}
+* {{trreq|as}}
 * Asturian: {{t-|ast|estómagu|m}}
+* {{trreq|ay}}
 * Azeri: {{t+|az|mədə}}, {{t-|az|qarın}}
 * Belarusian: {{t-|be|страўнік|m|tr=stráŭnik|sc=Cyrl}}
 * Bengali: {{t-|bn|পাকস্থলী|tr=pakôsthôli|sc=Beng}}
-* Breton: [[stomog]] {{m}}
+* Breton: {{t|br|stomog|m}}
 * Bulgarian: {{t+|bg|стомах|m|tr=stomáh|sc=Cyrl}}
 * Burmese: {{t+|my|ဗိုက်|tr=baik|sc=Mymr}}
 * Catalan: {{t+|ca|estómac|m}}
 * Chamicuro: {{tø|ccc|knani}}
+* {{trreq|ny}}
 * Chinese:
 *: Cantonese: {{tø|yue|胃|tr=wai6|sc=Hant}}
 *: Mandarin: {{t-|cmn|胃|tr=wèi|sc=Hani}}, {{t-|cmn|肚子|tr=dùzi|sc=Hani}}
 * Czech: {{t+|cs|žaludek|m}}
 * Danish: {{t-|da|bug|c}}
+* {{trreq|dv}}
 * Dutch: {{t+|nl|maag|f}}
 * Esperanto: {{t-|eo|stomako}}
 * Estonian: {{t-|et|kõht}}, {{t-|et|magu}}
+* {{trreq|ee}}
+* {{trreq|ext}}
 * Finnish: {{t+|fi|mahalaukku}}, {{t+|fi|vatsalaukku}}
 * French: {{t+|fr|estomac|m}}
 * Galician: {{t+|gl|estómago|m}}
@@ -68,6 +76,8 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * German: {{t+|de|Magen|m}}
 * Greek: {{t+|el|στομάχι|n|tr=stomáchi}}, {{t+|el|στόμαχος|m|tr=stómachos}}
 *: Ancient Greek: {{tø|grc|στόμαχος|m|tr=stómachos}}, {{tø|grc|γαστήρ|m|tr=ɣastír}}
+* {{trreq|gu}}
+* {{trreq|ha}}
 * Hawaiian: {{tø|haw|ʻōpū}}
 *: Hebrew: [[אסטומכא]] (’isṬōmkā’) {{m}}
 * Hebrew: {{t+|he|קיבה|f|tr=qebah}}
@@ -75,56 +85,81 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Hungarian: {{t+|hu|gyomor}}
 * Icelandic: {{t+|is|magi|m}}
 * Ido: {{t+|io|stomako}}
+* {{trreq|ig}}
 * Indonesian: {{t+|id|perut}}
+* {{trreq|ia}}
+* {{trreq|ie}}
 * Italian: {{t+|it|stomaco|m}}
 * Japanese: {{t+|ja|胃|tr=い, i|sc=Jpan}}, {{t+|ja|お腹|tr=おなか, o-naka|sc=Jpan}}, {{t+|ja|腹|tr=はら, hara|sc=Jpan}}
+* {{trreq|jv}}
 * Kazakh: {{t+|kk|асқазан|tr=asqazan|sc=Cyrl}}
 * Khmer: {{t+|km|ក្រពះ|tr=krɑpeah|sc=Khmr}}
+* {{trreq|rw}}
+* {{trreq|rn}}
 * Korean: {{t+|ko|위|tr=wi|sc=Kore}} ([[胃]])
 {{trans-mid}}
 * Lao: {{t+|lo|ກະເພາະ|tr=ka phǫ|sc=Laoo}}
 * Latgalian: {{tø|ltg|pasirds}}
-* Latin: [[stomachus]] {{m}}
+* Latin: {{t|la|stomachus|m}}
 * Latvian: {{t-|lv|kuņģis|m}}
 * Lithuanian: {{t+|lt|skrandis|m}}
 * Lower Sorbian: [[žołdk]] {{m}}
+* {{trreq|lg}}
 * Luo: {{tø|luo|ich}}
+* {{trreq|lb}}
 * Macedonian: {{t-|mk|желудник|m|tr=žéludnik}}, {{t-|mk|стомак|m|tr=stómak}}
 * Malay: {{t-|ms|perut}}
 * Maltese: {{t-|mt|stonku|m}}
 * Mandinka: {{tø|mnk|konoo}}
+* {{trreq|mr}}
 * Norwegian: {{t+|no|mage|m}}
+* {{trreq|nov}}
 * Old English: {{t-|ang|maga|m}}
+* {{trreq|or}}
+* {{trreq|ps}}
 * Persian: {{t+|fa|معده|tr=me'de|sc=fa-Arab}}
 * Polish: {{t+|pl|żołądek|m}}
 * Portuguese: {{t+|pt|estômago|m}}
+* {{trreq|pa}}
+* {{trreq|raj}}
 * Romanian: {{t+|ro|stomac|n}}
 * Russian: {{t+|ru|желудок|m|tr=želúdok}}, {{t+|ru|живот|m|tr=živót}}
+* {{trreq|sc}}
 * Scottish Gaelic: {{t-|gd|brù|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|желудац|m}}, {{t-|sh|стомак|m}}
 *: Roman: {{t-|sh|želudac|m}}, {{t-|sh|stomak|m}}
+* {{trreq|scn}}
+* {{trreq|sd}}
 * Sinhalese: {{t+|si|බඩ|tr=baḍa|sc=Sinh}}
 * Slovak: {{t-|sk|žalúdok|m}}
 * Slovene: {{t+|sl|želodec|m}}
+* {{trreq|so}}
 * Spanish: {{t+|es|estómago|m}}
 * Swahili: [[utumbo]] ''(noun 5/6)''
 * Swedish: {{t+|sv|mage|c}}
 * Tagalog: [[tiyan]]
+* {{trreq|ta}}
 * Taos: [[thį̀ę’éna]]
-* Telugu: [[పొట్ట]] (poTTa), [[కడుపు]] (kaDupu)
+* Telugu: {{t|te|పొట్ట|tr=poṭṭa|sc=Telu}}, {{t|te|కడుపు|tr=kaḍupu|sc=Telu}}
 * Thai: {{t+|th|ท้อง|tr=tóng|sc=Thai}}
 * Turkish: {{t+|tr|mide}}, {{t+|tr|karın}}
 * Turkmen: {{t-|tk|garyn}}
 * Ukrainian: {{t+|uk|шлунок|m|tr=šlúnok|sc=Cyrl}}
 * Upper Sorbian: [[žołdk]] {{m}}
 * Uzbek: {{t-|uz|qorin}}
+* {{trreq|vec}}
 * Vietnamese: {{t+|vi|dạ dày}}
 * Vilamovian: {{tø|wym|maoga}}
 * Volapük: {{t+|vo|stomäg}}
+* {{trreq|wa}}
 * Welsh: {{t+|cy|bola}}
 * West Frisian: [[mage]]
 * Wiradhuri: [[binji]]
+* {{trreq|wo}}
+* {{trreq|xh}}
+* {{trreq|yi}}
+* {{trreq|yo}}
 * Zulu: {{t+|zu|isisu|c7|c8}}
 {{trans-bottom}}
 
