--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -71,6 +71,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * {{trreq|ext}}
 * Finnish: {{t+|fi|mahalaukku}}, {{t+|fi|vatsalaukku}}
 * French: {{t+|fr|estomac|m}}
+* {{trreq|fur}}
 * Galician: {{t+|gl|estómago|m}}
 * Georgian: {{t-|ka|კუჭი|tr=kuči|sc=Geor}}
 * German: {{t+|de|Magen|m}}
