--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -123,6 +123,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 
 =====Translations=====
 {{trans-top|to enumerate or determine number}}
+* Albanian: {{t|sq|numëroj}}
 * American Sign Language: {{tø|ase|Flat9@BasePalm-PalmDown-FlatB@CenterChesthigh-PalmUp Flat9@InFinger-PalmDown-FlatB@CenterChesthigh}}
 * Anglo-Norman: {{tø|xno|counter}}
 * Arabic: {{t+|ar|عد|tr=3ádda|sc=Arab}}
