--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -72,6 +72,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * [[come true]]
 * [[come up]]
 * [[come with]]
+* [[come with the territory]]
 * [[come what may]]
 {{rel-bottom}}
 
