/* Translations */ rm numbers in brackets <speak#18671940>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -89,14 +89,14 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Belarusian: {{t-|be|гаварыць|tr=havarýc’}}, {{t-|be|размаўляць|tr=razmaŭljác’}}
 * Bengali: {{t-|bn|বলা|tr=bôla|sc=Beng}}
 * Breton: {{t+|br|komz}}
-* Bulgarian: {{t+|bg|говоря|tr=govorja}} (1, 6)
+* Bulgarian: {{t+|bg|говоря|tr=govorja}}
 * Burmese: {{t+|my|ပြော|tr=pyaw:|sc=Mymr}}, {{qualifier|formal}} {{t+|my|မြွက်|tr=mywet|sc=Mymr}}
 * Catalan: {{t+|ca|parlar}}
 * Chinese:
 *: Mandarin: {{t-|cmn|說|sc=Hani}}, {{t-|cmn|说|tr=shuō|sc=Hani}}, {{t|cmn|說話|sc=Hani}}, {{t-|cmn|说话|tr=shuōhuà|sc=Hani}}, {{t-|cmn|講|sc=Hani}}, {{t-|cmn|讲|tr=jiǎng|sc=Hani}}
 * Czech: {{t+|cs|mluvit}}, {{t-|cs|hovořit}}
 * Dalmatian: {{tø|dlm|faular}}
-* Danish: {{t+|da|tale}} (1, 2, 3, 4, 5, 6, 7)
+* Danish: {{t+|da|tale}}
 * Dutch: {{t+|nl|spreken}}
 * Esperanto: {{t-|eo|paroli}}
 * Estonian: {{t-|et|rääkima}}
