--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-(1520) From {{term|beauty}} + {{etyl|gem}} {{term|-ful||full of}}. Displaced earlier {{etyl|en|-}} ''[[sheen]]'' "beautiful" (from {{etyl|enm|-}} {{term|schene||beautiful|lang=enm}}, from {{etyl|ang|-}} {{term|sciene|scīene|beautiful|lang=ang}}), {{etyl|enm|-}} {{term|wliti||beautiful|lang=enm}}, from {{etyl|ang|-}} {{term|wlitig|wlitiġ|beautiful|lang=ang}}.
+(1520) From {{term|beauty|lang=en}} + {{term|-ful||full of|lang=en}}. Displaced earlier {{term|sheen|lang=en}} (from {{etyl|enm|-}} {{term|schene||beautiful|lang=enm}}, from {{etyl|ang|-}} {{term|sciene|scīene|beautiful|lang=ang}}), {{etyl|enm|-}} {{term|wliti||beautiful|lang=enm}}, from {{etyl|ang|-}} {{term|wlitig|wlitiġ|beautiful|lang=ang}}.
 
 ===Pronunciation===
 * {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|[ˈbjuːtɪfəɫ]}}, {{X-SAMPA|/"bju:tIf@l/}}
