--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -67,6 +67,7 @@
 * Macedonian: {{qualifier|tortoise or turtle}} {{t-|mk|желка|f|tr=žélka}}
 * Malay: {{t-|ms|kura-kura}}
 * Malayalam: {{t+|ml|ആമ|tr=āma|sc=Mlym}}
+* Maori: {{t|mi|honuwhenua}}
 * Nahuatl: {{t-|nah|āyotl}}
 * Navajo: {{tø|nv|chʼééh digháhii}}
 * Norwegian: {{t+|no|skilpadde}}, {{t+|no|skjelpadde}}
