--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -47,7 +47,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Japanese: [[吐く]] ([[はく]], haku), [[嘔吐する]] ([[おうとする]], ōtosuru), {{t-|ja|戻す|tr=もどす, modosu|sc=Jpan}}
 * Korean: [[게우다]] (geuda)<!--, [[토하다]] ([[吐]]-, to-hada)-->
 {{trans-mid}}
-* Latin: {{t-|la|vomo|alt=vomō}}, {{t-|la|vomito|vomitō}}
+* Latin: {{t-|la|vomo|alt=vomō}}, {{t-|la|vomito|alt=vomitō}}
 * Latvian: {{t+|lv|vemt}}
 * Lithuanian: {{t+|lt|vemti}}
 * Macedonian: {{t-|mk|повраќа|tr=póvraḱa}}, {{t-|mk|блуе|tr=blúe}}
@@ -63,7 +63,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Russian: {{t+|ru|блевать}}, {{t+|ru|рвать}}
 * {{ttbc|Serbo-Croatian}}:
 *: Cyrillic: {{t-|sh|ригати|sc=Cyrl}}, {{t-|sh|збљувати|sc=Cyrl}}, {{t-|sh|повратити|sc=Cyrl}}, {{t-|sh|бљувати|sc=Cyrl}}, , {{t-|sh|повраћати|sc=Cyrl}}
-*: Roman: {{t-|sh|rigati}},  {{t-|sh|zbljuvati}}, {{t-|sh|povratiti}}, {{t-|sh|bljuvati}}, {{t-|sh|povraćati}}
+*: Roman: {{t-|sh|rigati}}, {{t-|sh|zbljuvati}}, {{t-|sh|povratiti}}, {{t-|sh|bljuvati}}, {{t-|sh|povraćati}}
 * Spanish: {{t+|es|vomitar}}, {{t+|es|devolver}}, {{t+|es|arrojar}}
 * Swahili: {{t-|sw|kutapika}}
 * Swedish: {{t+|sv|kräkas}}, {{t+|sv|spy}}, {{t-|sv|kasta upp}}
