Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) <vomit#18677590>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -44,15 +44,15 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Hebrew: {{t-|he|הקיא|tr=hekí}}
 * Hungarian: {{t+|hu|hány}}
 * Italian: {{t+|it|vomitare}}, {{t+|it|rimettere}}
-* Japanese: [[吐く]] ([[はく]], haku), [[嘔吐する]] ([[おうとする]], ōtosuru), {{t-|ja|戻す|tr=もどす, modosu|sc=Jpan}}
-* Korean: [[게우다]] (geuda)
+* Japanese: {{t|ja|吐く|tr=[[はく]], haku|sc=Jpan}}, {{t|ja|嘔吐する|tr=[[おうとする]], ōtosuru|sc=Jpan}}, {{t-|ja|戻す|tr=もどす, modosu|sc=Jpan}}
+* Korean: {{t|ko|게우다|tr=geuda|sc=Kore}}
 {{trans-mid}}
 * Latin: {{t-|la|vomo|alt=vomō}}, {{t-|la|vomito|alt=vomitō}}
 * Latvian: {{t+|lv|vemt}}
 * Lithuanian: {{t+|lt|vemti}}
 * Macedonian: {{t-|mk|повраќа|tr=póvraḱa}}, {{t-|mk|блуе|tr=blúe}}
 * Malay: {{t-|ms|muntah}}
-* Maltese: [[irrimetta]], [[qala']]
+* Maltese: {{t|mt|irrimetta}}, {{t|mt|qala'}}
 * Norwegian: {{t+|no|kaste opp}}, {{t+|no|spy}}, {{t-|no|brekke seg}}
 * Old Irish: {{tø|sga|sceid}}
 * Polish: {{t+|pl|wymiotować}}
@@ -83,10 +83,9 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 ====Translations====
 {{trans-top|regurgitated former contents of a stomach}}
 * Armenian: {{t-|hy|փսխունք|tr=p'sxunk'}}
-* Bosnian: Dusmabagey
 * Czech: {{t-|cs|zvratky|m|p}}
 * Danish: {{t+|da|bræk|n}}, {{t+|da|opkast|n}}
-* Dutch: [[braaksel]], {{qualifier|colloquial}} [[kots]]
+* Dutch: {{t|nl|braaksel}}, {{qualifier|colloquial}} {{t|nl|kots}}
 * Estonian: {{t+|et|okse}}
 * Finnish: {{t+|fi|oksennus}}
 * French: {{t+|fr|vomi|m}}
@@ -99,26 +98,26 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Japanese: {{t-|ja|反吐|tr=へど, hedo|sc=Jpan}}
 * {{trreq|Korean}}
 * Kurdish:
-*: Sorani: {{ku-Arab|[[ڕشانه‌وه‌]]}}
+*: Sorani: {{t|ckb|ڕشانه‌وه‌|sc=ku-Arab}}
 * Latin: {{t-|la|vomitus|m}}
 * Latvian: {{t-|lv|vēmekļi|m|p}}
 {{trans-mid}}
 * Lithuanian: {{t-|lt|vėmalai|p}}
 * Macedonian: {{t-|mk|повраќаница|f|tr=povraḱánica}}, {{t-|mk|блујавица|f|tr=blujávica}}
 * Malay: {{t-|ms|muntahan}}
-* Maltese: [[rimettar]]
+* Maltese: {{t|mt|rimettar}}
 * Norwegian: {{t+|no|oppkast|n}}, {{t+|no|spy|n}}
-* Polish: [[wymiociny]] {{p}}
+* Polish: {{t|pl|wymiociny|p}}
 * Portuguese: {{t+|pt|vômito|m}}
 * Russian: {{t+|ru|блевотина|f|tr=blevotina|sc=Cyrl}}, {{t+|ru|рвота|f|tr=rvota|sc=Cyrl}}
 * Serbo-Croatian:
-*: Roman: {{t-|sh|povraćka|f}}, [[bljuvotina]] {{f}}, [[povraćaj]] {{m}}, [[izbljuvak]] {{m}}
+*: Roman: {{t-|sh|povraćka|f}}, {{t|sh|bljuvotina|f}}, {{t|sh|povraćaj|m}}, {{t|sh|izbljuvak|m}}
 * Spanish: {{t-|es|vómito|m}}
 * Swedish: {{t+|sv|spya}}
-* Telugu: [[వాంతి]] (vaamthi)
+* Telugu: {{t|te|వాంతి|tr=vaamthi|sc=Telu}}
 * Turkish: {{t+|tr|kusmuk}}, {{t+|tr|kusuntu}}
 * Ukrainian: {{t+|uk|блювота|f|tr=bljuvóta|sc=Cyrl}}, {{t+|uk|блювотиння|n|tr=bljuvotýnnja|sc=Cyrl}}
-* Urdu: [[الٹى]]
+* Urdu: {{t|ur|الٹى|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}
 {{trans-bottom}}
 
