--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -88,7 +88,7 @@
 * Swahili: {{t+|sw|kobe}}
 * Swedish: {{t+|sv|sköldpadda}}
 * Tajik: {{qualifier|tortoise or turtle}} {{t-|tg|сангпушт|tr=sangpušt|sc=Cyrl}}
-* Tamil: {{t+|ta|ஓடன்|tr=ōṭaṉ|sc=Taml}}
+* Tamil: {{t+|ta|ஓடன்|tr=ōṭaṉ|sc=Taml}}, {{t|ta|ஆமை|tr=āmai|sc=Taml}}
 * Telugu: {{qualifier|tortoise or turtle}} {{t+|te|తాబేలు|tr=tābēlu|sc=Telu}}
 * Thai: {{qualifier|tortoise or turtle}} {{t+|th|เต่า|tr=tàò|sc=Thai}}
 * Tswana: {{t-|tn|khudu}} (9/10)
