t+mk:[[сврши]] ([[WT:EDIT|Assisted]]) <came#18682722>

--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -30,6 +30,7 @@
 
 {{trans-top|simple past of cum}}
 {{trans-mid}}
+* Macedonian: {{t|mk|сврши|tr=sv'rši|sc=Cyrl}}
 {{trans-bottom}}
 
 ===Statistics===
