# [[adherence]]; [[attachment]]; [[devotion]]  #* Milton  #*: A more tenacious '''cling''' to worldly respects. <cling#18689273>

--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -13,6 +13,9 @@ Old English? {{term|clingan}} to adhere, to wither; akin to {{etyl|da}} {{term|k
 # [[fruit|Fruit]] (especially [[peach]]) whose [[flesh]] adheres strongly to the [[pit]].
 #* '''1908''', [[w:O. Henry|O. Henry]], ''Hostages to Momus'':
 #*: Antelope steaks and fried liver to begin on, and venison cutlets with chili con carne and pineapple fritters, and then some sardines and mixed pickles; and top it off with a can of yellow '''clings''' and a bottle of beer.
+# [[adherence]]; [[attachment]]; [[devotion]]
+#* Milton
+#*: A more tenacious '''cling''' to worldly respects.
 
 ===Verb===
 {{en-verb|clings|clinging|clung}}
