--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|əʊt}}
 
 ===Etymology===
-From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to float|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|flutōnan||to float|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|plewd-|lang=ine-pro}}, {{recons|plew-|lang=ine-pro}}, {{recons|plōw-||to float, swim, fly|lang=ine-pro}}. Cognate with {{etyl|gml|-}} {{term|vloten|lang=gml}}, {{term|vlotten||to float, swim|lang=gml}}, Middle Dutch {{term|vloten|lang=dum}}, Old Norse {{term|flota|lang=non}}, Icelandic {{term|fljóta|lang=is}}, {{etyl|ang|-}} {{term|fleotan|flēotan|to float, swim|lang=ang}}, Ancient Greek {{term|πλέω|lang=grc}}, Lithuanian {{term|plaukti|lang=lt}}, Russian {{term|плавать|lang=ru}}.
+From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to float|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|flutōnan||to float|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|plewd-|lang=ine-pro}}, {{recons|plew-||to float, swim, fly|lang=ine-pro}}. Cognate with {{etyl|gml|-}} {{term|vloten|lang=gml}}, {{term|vlotten||to float, swim|lang=gml}}, Middle Dutch {{term|vloten|lang=dum}}, Old Norse {{term|flota|lang=non}}, Icelandic {{term|fljóta|lang=is}}, {{etyl|ang|-}} {{term|fleotan|flēotan|to float, swim|lang=ang}}, Ancient Greek {{term|πλέω|lang=grc}}, Lithuanian {{term|plaukti|lang=lt}}, Russian {{term|плавать|lang=ru}}.
 
 ===Noun===
 {{en-noun}}
