--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -98,12 +98,12 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 
 ====Translations====
 {{trans-top|apply force to (something) so it comes towards one}}
-* Arabic: {{t-|ar|جر|tr=járra}},  {{t-|ar|سحب|tr=sáHaba}}
+* Arabic: {{t-|ar|جر|tr=járra}},  {{t-|ar|سحب|tr=sáḥaba}}
 *: Egyptian Arabic: {{tø|arz|جر|tr=garr|sc=Arab}}, {{tø|arz|جرجر|tr=gargar|sc=Arab}}, {{tø|arz|سحب|tr=saḥab|sc=Arab}}
 * Armenian: {{t-|hy|քաշել|tr=k'ašel}}, {{t-|hy|ձգել|tr=jgel}}
 * Catalan: {{t+|ca|tirar}}
 * Chinese:
-*: Mandarin: {{t|cmn|拖拉|tr=tuōlā|sc=Hani}}, {{t-|cmn|拉|tr=lā|sc=Hani}}
+*: Mandarin: {{t|cmn|拖拉|tr=tuōlā|sc=Hani}}, {{t+|cmn|拉|tr=lā|sc=Hani}}
 * Czech: {{t+|cs|táhnout}}
 * Danish: {{t+|da|trække}}
 * Dutch: {{t+|nl|trekken}}
@@ -115,7 +115,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Hungarian: {{t+|hu|húz}}
 * Indonesian: {{t+|id|menarik}},  {{t+|id|tarik}}
 * Italian: [[tirare]]
-* Japanese: {{t+|ja|引く|tr=ひく, hiku}}, {{t-|ja|引っ張る|sc=Jpan}}
+* Japanese: {{t+|ja|引く|tr=ひく, hiku}}, {{t-|ja|引っ張る|tr=ひっぱる, hipparu|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|haler}}
 * Korean: {{t+|ko|끌다|tr=kkeulda|sc=Hang}}, {{t+|ko|뽑다|tr=ppopda|sc=Hang}}
 {{trans-mid}}
