--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -101,10 +101,12 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Arabic: {{t-|ar|جر|tr=járra}},  {{t-|ar|سحب|tr=sáḥaba}}
 *: Egyptian Arabic: {{tø|arz|جر|tr=garr|sc=Arab}}, {{tø|arz|جرجر|tr=gargar|sc=Arab}}, {{tø|arz|سحب|tr=saḥab|sc=Arab}}
 * Armenian: {{t-|hy|քաշել|tr=k'ašel}}, {{t-|hy|ձգել|tr=jgel}}
+* Belarusian: {{t|be|цягнуць|tr=cjahnúcʹ|sc=Cyrl}}
+* Bulgarian: {{t|bg|дърпам|tr=dǎrpam|sc=Cyrl}}
 * Catalan: {{t+|ca|tirar}}
 * Chinese:
 *: Mandarin: {{t|cmn|拖拉|tr=tuōlā|sc=Hani}}, {{t+|cmn|拉|tr=lā|sc=Hani}}
-* Czech: {{t+|cs|táhnout}}
+* Czech: {{t+|cs|táhnout}}, {{t|cs|tahat}}
 * Danish: {{t+|da|trække}}
 * Dutch: {{t+|nl|trekken}}
 * Esperanto: {{t-|eo|tiri}}
@@ -118,24 +120,29 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Japanese: {{t+|ja|引く|tr=ひく, hiku}}, {{t-|ja|引っ張る|tr=ひっぱる, hipparu|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|haler}}
 * Korean: {{t+|ko|끌다|tr=kkeulda|sc=Hang}}, {{t+|ko|뽑다|tr=ppopda|sc=Hang}}
-{{trans-mid}}
 * Kurdish:
 *: Sorani: {{ku-Arab|[[ڕاکێشه‌]]}}
+{{trans-mid}}
 * Latin: {{t-|la|vello}},  {{t+|la|traho}}
 * Lojban: {{t-|jbo|lacpu}}
 * Malay: {{t-|ms|tarik}}
 * Norwegian: {{t+|no|trekke}}, {{t+|no|dra}}
-* Polish: [[ciągnąć]], [[pociągnąć]]
+* Polish: [[ciągnąć]], [[pociągnąć]], {{t|pl|ciągnąć}}, {{t|pl|pociągnąć}}
 * Portuguese: {{t+|pt|puxar}},  {{t+|pt|tirar}}
 * Romanian: {{t-|ro|trage}}
 * Romansch: {{t-|rm|trair}}
-* Russian: {{t+|ru|тянуть|tr=tjanút’}} {{impf}}, {{t+|ru|потянуть|tr=potjanút’}} {{pf.}}, {{t+|ru|тащить|tr=taščít’}} {{impf}}, {{t+|ru|потащить|tr=potaščít’}} {{pf.}}
+* Russian: {{t+|ru|тянуть|tr=tjanút’}} {{impf}}, {{t+|ru|потянуть|tr=potjanút’}} {{pf.}}, {{t+|ru|тащить|tr=taščít’}} {{impf}}, {{t+|ru|потащить|tr=potaščít’}} {{pf.}}, {{t|ru|тягать|tr=tjagátʹ|sc=Cyrl}} {{qualifier|abstract}}
 * Scottish Gaelic: {{t-|gd|slaod}},  {{t-|gd|tarraing}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|потезати}}, {{t|sh|потегнути}}
+*: Roman: {{t|sh|potezati}}, {{t|sh|potegnuti}}
+* Slovak: {{t|sk|ťahať}}, {{t|sk|tiahnuť}}, {{t|sk|potiahnuť}}
 * Spanish: {{t+|es|tirar}}, {{t+|es|jalar}}
 * Swahili: [[kuvuta]]
 * Swedish: {{t+|sv|dra}}, {{t+|sv|draga}}
 * Telugu: [[లాగు]] (laagu)
 * Turkish: {{t+|tr|çekmek}}
+* Ukrainian: {{t|uk|тягти|tr=tjahtý|sc=Cyrl}}, {{t|uk|потягнути|tr=potjahnúty|sc=Cyrl}}, {{t|uk|тягнути|tr=tjahnúty|sc=Cyrl}}
 * Vietnamese: {{t+|vi|kéo}}, {{t+|vi|giật}}
 * West Frisian: {{t+|fy|trekke}},  {{t-|fy|lûke}}
 {{trans-bottom}}
@@ -227,6 +234,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Kurdish:
 *: Sorani: {{ku-Arab|[[ڕاکێشان]]}}
 {{trans-mid}}
+* Russian: {{t|ru|тяга|f|tr=tjága|sc=Cyrl}}
 * Swedish: {{t+|sv|ryck|n}}
 {{trans-bottom}}
 
