t+hi:[[खींचना]] t+ur:[[کهينچنا]] t+fa:[[کشیدن]] t-balance t+az:[[çəkmək]] t+kk:[[тарту]] ([[WT:EDIT|Assisted]]) <pull#18699842>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -101,6 +101,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Arabic: {{t-|ar|جر|tr=járra}},  {{t-|ar|سحب|tr=sáḥaba}}
 *: Egyptian Arabic: {{tø|arz|جر|tr=garr|sc=Arab}}, {{tø|arz|جرجر|tr=gargar|sc=Arab}}, {{tø|arz|سحب|tr=saḥab|sc=Arab}}
 * Armenian: {{t-|hy|քաշել|tr=k'ašel}}, {{t-|hy|ձգել|tr=jgel}}
+* Azeri: {{t|az|çəkmək}}
 * Belarusian: {{t|be|цягнуць|tr=cjahnúcʹ|sc=Cyrl}} {{impf}}, {{t|be|пацягнуць|tr=pacjahnúcʹ|sc=Cyrl}} {{pf}}
 * Bulgarian: {{t|bg|дърпам|tr=dǎrpam|sc=Cyrl}}, {{t|bg|влека|tr=vleka|sc=Cyrl}}, {{t|bg|влача|tr=vlača|sc=Cyrl}}
 * Catalan: {{t+|ca|tirar}}
@@ -114,11 +115,13 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * French: {{t+|fr|tirer}}
 * Galician: {{t-|gl|puxar}},  {{t+|gl|tirar}}
 * German: {{t+|de|ziehen}}
+* Hindi: {{t|hi|खींचना|tr=khī̃cnā|sc=Deva}}
 * Hungarian: {{t+|hu|húz}}
 * Indonesian: {{t+|id|menarik}},  {{t+|id|tarik}}
 * Italian: [[tirare]]
 * Japanese: {{t+|ja|引く|tr=ひく, hiku}}, {{t-|ja|引っ張る|tr=ひっぱる, hipparu|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|haler}}
+* Kazakh: {{t|kk|тарту|tr=tartw|sc=Cyrl}}
 * {{trreq|Khmer}}
 * Korean: {{t+|ko|끌다|tr=kkeulda|sc=Hang}}, {{t+|ko|뽑다|tr=ppopda|sc=Hang}}
 * Kurdish:
@@ -129,6 +132,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Macedonian: {{t|mk|влече|tr=vléče|sc=Cyrl}}
 * Malay: {{t-|ms|tarik}}
 * Norwegian: {{t+|no|trekke}}, {{t+|no|dra}}
+* Persian: {{t|fa|کشیدن|tr=kešidan|sc=fa-Arab}}
 * Polish: {{t|pl|ciągnąć}} {{impf}}, {{t|pl|pociągnąć}} {{pf}}
 * Portuguese: {{t+|pt|puxar}},  {{t+|pt|tirar}}
 * Romanian: {{t-|ro|trage}}
@@ -147,6 +151,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Thai: {{t|th|ดึง|tr=deung|sc=Thai}}
 * Turkish: {{t+|tr|çekmek}}
 * Ukrainian: {{t|uk|потягнути|tr=potjahnúty|sc=Cyrl}} {{impf}}, {{t|uk|тягнути|tr=tjahnúty|sc=Cyrl}} {{im}}, {{t|uk|тягти|tr=tjahtý|sc=Cyrl}} {{impf}}
+* Urdu: {{t|ur|کهينچنا|tr=khī̃cnā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|kéo}}, {{t+|vi|giật}}
 * West Frisian: {{t+|fy|trekke}},  {{t-|fy|lûke}}
 {{trans-bottom}}
