--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -70,6 +70,7 @@ From {{etyl|xno}} {{term|founder|lang=xno}} (French: {{term|fonder|lang=fr}}), f
 {{trans-mid}}
 * Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
 * {{trreq|pt}}
+* {{trreq|ro}}
 * Russian: {{t+|ru|основывать|tr=osnóvyvat'}} {{impf}}, {{t+|ru|основать|tr=osnovát'}} {{pf.}}
 * Scots: {{tø|sco|foond}}
 * Spanish: {{t+|es|fundar}}
