/* Translations */ fix my translit <butter#18707423>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -195,7 +195,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Bengali: {{t-|bn|মাখন|tr=makhôn|sc=Beng}}
 * Breton: {{t|br|amanenn|m}}
 * Bulgarian: {{t+|bg|масло|n|tr=máslo}}
-* Burmese: {{t+|my|ထောပတ်|tr=hto: bá|sc=Mymr}}
+* Burmese: {{t+|my|ထောပတ်|tr=htaw:bat}}
 * Catalan: {{t|ca|mantega|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|黃油|sc=Hani}}, {{t+|cmn|黄油|tr=huángyóu|sc=Hani}}, {{t+|cmn|牛油|tr=niúyóu|sc=Hani}}, {{t+|cmn|白脫|sc=Hani}}, {{t+|cmn|白脱|tr=báituō|sc=Hani}}
