--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -7,7 +7,7 @@
 * {{enPR|bŭtʹ-ər}}, {{IPA|/ˈbʌ.təɹ/}}, {{X-SAMPA|/"bV.t@r\/}}
 *** {{a|UK}} {{IPA|/ˈbʌ.tə/}}, {{X-SAMPA|"bV.t@/}}
 *** {{audio|En-uk-butter.ogg|Audio (UK)}}
-*** {{a|US}} {{IPA|/ˈbʌ.ɾɚ/}}, {{X-SAMPA|/"bV.4@`/}}
+*** {{a|US}} {{IPA|/ˈbʌ.tɚ/|[ˈbʌɾɚ]}}, {{X-SAMPA|/"bV.t@`/|["bV4@`]}}
 *** {{audio|en-us-butter.ogg|Audio (US)}}
 ** {{rhymes|ʌtə(r)}}
 * {{a|some Northern England accents}} {{IPA|/ˈbʊ.tə/}}
