--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -250,6 +250,7 @@ From {{etyl|fr|ro}} {{term|blond|lang=fr}}.
 [[simple:blond]]
 [[fi:blond]]
 [[ta:blond]]
+[[te:blond]]
 [[vi:blond]]
 [[wa:blond]]
 [[zh:blond]]
