removed duplicate Serbo-Croatian translations <Czech Republic#18709702>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -16,7 +16,6 @@
 * [[CZE]]
 
 ====Translations====
-{{rfc-tsort|duplicate language: Serbo-Croatian}}
 {{trans-top|country in Central Europe}}
 * Afrikaans: {{t-|af|Tsjeggiese Republiek}}
 * Arabic: {{t-|ar|جمهورية التشيك|f|tr=jumhuuriyyat al-tshik}},  {{t-|ar|التشيك|m|tr=al-tshik}}
@@ -31,7 +30,6 @@
 *: Mandarin: {{t|cmn|捷克共和國|sc=Hani}}, {{t|cmn|捷克共和国|tr=Jiékè Gònghéguó|sc=Hani}}, {{t-|cmn|捷克|tr=Jiékè|sc=Hani}}
 * Chuvash: {{tø|cv|Чех Республики|tr=Čeh Respubliki|sc=Cyrl}}
 * Crimean Tatar: {{tø|crh|Çeh Cumhuriyeti}}
-* Serbo-Croatian: {{t-|sh|Češka Republika|f}}
 * Czech: {{t+|cs|Česká republika|f}},  {{t+|cs|Česko|n}},  {{t+|cs|Čechy|p}}
 * Danish: {{t+|da|Tjekkiet}}
 * Dutch: {{t+|nl|Tsjechische Republiek}}
@@ -39,7 +37,7 @@
 * Estonian: [[Tšehhi]], [[Tšehhimaa]], [[Tšehhi Vabariik]]
 * Faroese: {{t-|fo|Kekkia|f|n}}, {{qualifier|rarely}} {{t-|fo|Kekska lýðveldið|n}}
 * Finnish: {{t+|fi|Tšekin tasavalta}},  {{t+|fi|Tšekki}},  {{t-|fi|Tšekinmaa}}
-* French: la [[République tchèque]] {{f}},  {{t+|fr|Tchéquie|f}}
+* French: [[République tchèque]] {{f}},  {{t+|fr|Tchéquie|f}}
 * German: {{t+|de|Tschechische Republik}},  {{t+|de|Tschechien|n}},  {{t+|de|Tschechei|f}}
 * Greek: {{t-|el|Δημοκρατία της Τσεχίας|f|tr=Dimokratía tis Tsechías}},  {{t+|el|Τσεχία|f|tr=Tsechía}}
 * Hebrew: {{t-|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit}},  {{t-|he|צ'כיה|f|tr=chekhia}}
@@ -48,7 +46,7 @@
 * Icelandic: {{t+|is|Tékkland|n}}, {{t|is|Tékkneska lýðveldið|n}}
 * Interlingua: [[Republica Chec]]
 * Irish: {{t-|ga|Poblacht na Seice|f}}
-* Italian: la [[repubblica Ceca]] {{f}}
+* Italian: [[repubblica Ceca]] {{f}}
 * Japanese: {{t+|ja|チェコ|tr=Cheko}}, {{t-|ja|チェコ共和国|tr=Cheko-kyōwakoku}}({{Jpan|ちぇこきょうわこく}})
 * Kazakh: {{t|kk|Чех Республикасы|tr=Čex Respublikası|sc=Cyrl}}
 * Khmer: {{t-|km|សាធារណរដ្ឋឆែក|tr=sar thea rak nak roath chaek|sc=Khmr}}
@@ -71,12 +69,14 @@
 * Romansch: {{t-|rm|Tschechia|f}}
 * Russian: {{t-|ru|Чешская Республика|f|tr=Čéšskaja Respúblika}},  {{t+|ru|Чехия|f|tr=Čéxija}}
 * Scottish Gaelic: an t-{{t-|gd|Seic|f}}
-* Serbo-Croatian: {{t-|sh|Чешка Република|f|sc=Cyrl}},  {{t-|sh|Češka Republika|f}},  {{t-|sh|Чешка|f|sc=Cyrl}},  {{t-|sh|Češka|f}}
+* Serbo-Croatian:
+*: Cyrillic: {{t-|sh|Чешка Република|f|sc=Cyrl}}, {{t-|sh|Чешка|f|sc=Cyrl}}
+*: Roman: {{t-|sh|Češka Republika|f}},  {{t-|sh|Češka|f}}
 * Sicilian: [[Ripùbblica Ceca]] {{f}}
 * Silesian: {{tø|szl|Czesko Republika|f}}, (''colloquial'') {{tø|szl|Czechy|p}}
 * Slovak: {{t-|sk|Česká republika|f}},  {{t-|sk|Česko|n}}
 * Slovene: {{t-|sl|Češka Republika|f}},  {{t+|sl|Češka|f}}
-* Spanish: la [[República Checa]] {{f}}
+* Spanish: [[República Checa]] {{f}}
 * Swahili: {{t-|sw|Jamhuri ya Ucheki}}
 * Swedish: {{t+|sv|Tjeckien}}, {{t-|sv|Republiken Tjeckien}}
 * Thai: {{t+|th|สาธารณรัฐเช็ก|tr=săa-taa-rá-ná-rát chék}},  {{t-|th|เช็ก|tr=chék}}
@@ -89,7 +89,7 @@
 * Võro: [[Tsehhi]], [[Tsehhi Vabariik']]
 * Welsh: [[Y Weriniaeth Tsiec]]
 * Yakut: {{tø|sah|Чех Республиката|tr=Čex Respublikata|sc=Cyrl}}
-* Yiddish: (Tshekhishe Republik)
+* Yiddish: (Tshekhishe Republik) {{rfscript|Hebr|lang=yi}}
 {{trans-bottom}}
 
 ====See also====
