--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -18,76 +18,76 @@
 ====Translations====
 {{trans-top|country in Central Europe}}
 * Afrikaans: {{t-|af|Tsjeggiese Republiek}}
-* Arabic: {{t-|ar|جمهورية التشيك|f|tr=jumhuuriyyat al-tshik}},  {{t-|ar|التشيك|m|tr=al-tshik}}
-* Armenian: [[Չեխիայի Հանրապետություն]] (Čexiayi Hanrapetut'yun)
+* Arabic: {{t-|ar|جمهورية التشيك|f|tr=jumhuuriyyat al-tshik}}, {{t-|ar|التشيك|m|tr=al-tshik}}
+* Armenian: {{t|hy|Չեխիայի Հանրապետություն|tr=Čexiayi Hanrapetut'yun|sc=Armn}}
 * Azeri: {{t-|az|Çex Respublikası}}
-* Belarusian: {{t-|be|Чэшская рэспубліка|f|tr=Čéšskaja Respúblika}},  {{t-|be|Чэхія|f|tr=Čéxija}}
+* Belarusian: {{t-|be|Чэшская рэспубліка|f|tr=Čéšskaja Respúblika}}, {{t-|be|Чэхія|f|tr=Čéxija}}
 * Bengali: {{t-|bn|চেক প্রজাতন্ত্র}}
-* Breton: [[Republik Tchek]]
-* Bulgarian: {{t-|bg|Чешка република|f|tr=Čéška repúblika}},  {{t+|bg|Чехия|f|tr=Čéxija}}
-* Catalan: [[República Txeca]] {{f}}
+* Breton: {{t|br|Republik Tchek}}
+* Bulgarian: {{t-|bg|Чешка република|f|tr=Čéška repúblika}}, {{t+|bg|Чехия|f|tr=Čéxija}}
+* Catalan: {{t|ca|República Txeca|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|捷克共和國|sc=Hani}}, {{t|cmn|捷克共和国|tr=Jiékè Gònghéguó|sc=Hani}}, {{t-|cmn|捷克|tr=Jiékè|sc=Hani}}
 * Chuvash: {{tø|cv|Чех Республики|tr=Čeh Respubliki|sc=Cyrl}}
 * Crimean Tatar: {{tø|crh|Çeh Cumhuriyeti}}
-* Czech: {{t+|cs|Česká republika|f}},  {{t+|cs|Česko|n}},  {{t+|cs|Čechy|p}}
+* Czech: {{t+|cs|Česká republika|f}}, {{t+|cs|Česko|n}}, {{t+|cs|Čechy|p}}
 * Danish: {{t+|da|Tjekkiet}}
 * Dutch: {{t+|nl|Tsjechische Republiek}}
 * Esperanto: {{t-|eo|Ĉeĥio}}
-* Estonian: [[Tšehhi]], [[Tšehhimaa]], [[Tšehhi Vabariik]]
+* Estonian: {{t|et|Tšehhi}}, {{t|et|Tšehhimaa}}, {{t|et|Tšehhi Vabariik}}
 * Faroese: {{t-|fo|Kekkia|f|n}}, {{qualifier|rarely}} {{t-|fo|Kekska lýðveldið|n}}
-* Finnish: {{t+|fi|Tšekin tasavalta}},  {{t+|fi|Tšekki}},  {{t-|fi|Tšekinmaa}}
-* French: [[République tchèque]] {{f}},  {{t+|fr|Tchéquie|f}}
-* German: {{t+|de|Tschechische Republik}},  {{t+|de|Tschechien|n}},  {{t+|de|Tschechei|f}}
-* Greek: {{t-|el|Δημοκρατία της Τσεχίας|f|tr=Dimokratía tis Tsechías}},  {{t+|el|Τσεχία|f|tr=Tsechía}}
-* Hebrew: {{t-|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit}},  {{t-|he|צ'כיה|f|tr=chekhia}}
-* Hindi: {{t-|hi|चेक रिपब्लिक|tr=cek ripablik}},  {{t+|hi|चेक|tr=cek}}
+* Finnish: {{t+|fi|Tšekin tasavalta}}, {{t+|fi|Tšekki}}, {{t-|fi|Tšekinmaa}}
+* French: {{t|fr|République tchèque|f}}, {{t+|fr|Tchéquie|f}}
+* German: {{t+|de|Tschechische Republik}}, {{t+|de|Tschechien|n}}, {{t+|de|Tschechei|f}}
+* Greek: {{t-|el|Δημοκρατία της Τσεχίας|f|tr=Dimokratía tis Tsechías}}, {{t+|el|Τσεχία|f|tr=Tsechía}}
+* Hebrew: {{t-|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit}}, {{t-|he|צ'כיה|f|tr=chekhia}}
+* Hindi: {{t-|hi|चेक रिपब्लिक|tr=cek ripablik}}, {{t+|hi|चेक|tr=cek}}
 * Hungarian: {{t+|hu|Cseh Köztársaság}}
 * Icelandic: {{t+|is|Tékkland|n}}, {{t|is|Tékkneska lýðveldið|n}}
-* Interlingua: [[Republica Chec]]
+* Interlingua: {{t|ia|Republica Chec}}
 * Irish: {{t-|ga|Poblacht na Seice|f}}
-* Italian: [[repubblica Ceca]] {{f}}
+* Italian: {{t|it|repubblica Ceca|f}}
 * Japanese: {{t+|ja|チェコ|tr=Cheko}}, {{t-|ja|チェコ共和国|tr=Cheko-kyōwakoku}}({{Jpan|ちぇこきょうわこく}})
 * Kazakh: {{t|kk|Чех Республикасы|tr=Čex Respublikası|sc=Cyrl}}
 * Khmer: {{t-|km|សាធារណរដ្ឋឆែក|tr=sar thea rak nak roath chaek|sc=Khmr}}
-* Korean: {{t-|ko|체코 공화국|tr=Cheko gong-hwaguk|sc=Hang}},  {{t+|ko|체코|tr=Cheko|sc=Hang}}
+* Korean: {{t-|ko|체코 공화국|tr=Cheko gong-hwaguk|sc=Hang}}, {{t+|ko|체코|tr=Cheko|sc=Hang}}
 {{trans-mid}}
-* Kurdish: [[Komara Çêkiyayê]]
+* Kurdish: {{t|ku|Komara Çêkiyayê}}
 * Latin: {{t-|la|Cechia|f}}, {{t-|la|Respublica Cecha|f}}
-* Latvian: [[Čehijas Republika]] {{f}}
-* Luxembourgish: [[Tschechesch Republik]]
-* Macedonian: {{t+|mk|Чешка|f|tr=Čéška}},  {{t-|mk|Чешка Република|f|tr=Čéška Repúblika}}
-* Maltese: ir-[[Repubblika Ċeka]]
+* Latvian: {{t|lv|Čehijas Republika|f}}
+* Luxembourgish: {{t|lb|Tschechesch Republik}}
+* Macedonian: {{t+|mk|Чешка|f|tr=Čéška}}, {{t-|mk|Чешка Република|f|tr=Čéška Repúblika}}
+* Maltese: {{t|mt|Repubblika Ċeka|alt=ir-Repubblika Ċeka}}
 * Navajo: {{tø|nv|Chek bikéyah}}
 * Norwegian: {{t+|no|Tsjekkia}}, {{t-|no|Den tsjekkiske republikk}}
-* Persian: {{t+|fa|جمهوری چک|tr=Jomhuri-ye Chek}},  {{t+|fa|چک|tr=Chek}}
-* Polish: {{t+|pl|Republika Czeska|f}},  {{t+|pl|Czechy|p}}
+* Persian: {{t+|fa|جمهوری چک|tr=Jomhuri-ye Chek}}, {{t+|fa|چک|tr=Chek}}
+* Polish: {{t+|pl|Republika Czeska|f}}, {{t+|pl|Czechy|p}}
 * Pontic Greek: {{tø|pnt|Δημοκρατίαν τη Τσεχίας}}
 * Portuguese: {{t+|pt|República Tcheca}}
 * Quechua: {{t-|qu|Chiksuyu}}
 * Romanian: {{t+|ro|Republica Cehă|f}}
 * Romansch: {{t-|rm|Tschechia|f}}
-* Russian: {{t-|ru|Чешская Республика|f|tr=Čéšskaja Respúblika}},  {{t+|ru|Чехия|f|tr=Čéxija}}
+* Russian: {{t-|ru|Чешская Республика|f|tr=Čéšskaja Respúblika}}, {{t+|ru|Чехия|f|tr=Čéxija}}
 * Scottish Gaelic: an t-{{t-|gd|Seic|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|Чешка Република|f|sc=Cyrl}}, {{t-|sh|Чешка|f|sc=Cyrl}}
-*: Roman: {{t-|sh|Češka Republika|f}},  {{t-|sh|Češka|f}}
-* Sicilian: [[Ripùbblica Ceca]] {{f}}
+*: Roman: {{t-|sh|Češka Republika|f}}, {{t-|sh|Češka|f}}
+* Sicilian: {{t|scn|Ripùbblica Ceca|f}}
 * Silesian: {{tø|szl|Czesko Republika|f}}, (''colloquial'') {{tø|szl|Czechy|p}}
-* Slovak: {{t-|sk|Česká republika|f}},  {{t-|sk|Česko|n}}
-* Slovene: {{t-|sl|Češka Republika|f}},  {{t+|sl|Češka|f}}
-* Spanish: [[República Checa]] {{f}}
+* Slovak: {{t-|sk|Česká republika|f}}, {{t-|sk|Česko|n}}
+* Slovene: {{t-|sl|Češka Republika|f}}, {{t+|sl|Češka|f}}
+* Spanish: {{t|es|República Checa|f}}
 * Swahili: {{t-|sw|Jamhuri ya Ucheki}}
 * Swedish: {{t+|sv|Tjeckien}}, {{t-|sv|Republiken Tjeckien}}
-* Thai: {{t+|th|สาธารณรัฐเช็ก|tr=săa-taa-rá-ná-rát chék}},  {{t-|th|เช็ก|tr=chék}}
+* Thai: {{t+|th|สาธารณรัฐเช็ก|tr=săa-taa-rá-ná-rát chék}}, {{t-|th|เช็ก|tr=chék}}
 * Turkish: {{t+|tr|Çek Cumhuriyeti}}
 * Turkmen: {{t-|tk|Çeh Republikasy}}
-* Ukrainian: {{t-|uk|Чеська Республіка|f|tr=Čés'ka Respúblika}},  {{t+|uk|Чехія|f|tr=Čéxija}}
+* Ukrainian: {{t-|uk|Чеська Республіка|f|tr=Čés'ka Respúblika}}, {{t+|uk|Чехія|f|tr=Čéxija}}
 * Uyghur: {{t-|ug|چېخ جۇمھۇرىيەتى|sc=ug-Arab}}
 * Uzbek: {{t-|uz|Chex Respublikasi}}
-* Vietnamese: {{t-|vi|Cộng hòa Séc}},  {{t-|vi|Séc}}
-* Võro: [[Tsehhi]], [[Tsehhi Vabariik']]
-* Welsh: [[Y Weriniaeth Tsiec]]
+* Vietnamese: {{t-|vi|Cộng hòa Séc}}, {{t-|vi|Séc}}
+* Võro: {{t|vro|Tsehhi}}, {{t|vro|Tsehhi Vabariik'}}
+* Welsh: {{t|cy|Y Weriniaeth Tsiec}}
 * Yakut: {{tø|sah|Чех Республиката|tr=Čex Respublikata|sc=Cyrl}}
 * Yiddish: (Tshekhishe Republik) {{rfscript|Hebr|lang=yi}}
 {{trans-bottom}}
