t+oc:[[Republica Chèca]] ([[WT:EDIT|Assisted]]) <Czech Republic#18710539>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -60,6 +60,7 @@
 * Maltese: {{t|mt|Repubblika Ċeka|alt=ir-Repubblika Ċeka}}
 * Navajo: {{tø|nv|Chek bikéyah}}
 * Norwegian: {{t+|no|Tsjekkia}}, {{t-|no|Den tsjekkiske republikk}}
+* Occitan: {{t|oc|Republica Chèca|f}}
 * Persian: {{t+|fa|جمهوری چک|tr=Jomhuri-ye Chek}}, {{t+|fa|چک|tr=Chek}}
 * Polish: {{t+|pl|Republika Czeska|f}}, {{t+|pl|Czechy|p}}
 * Pontic Greek: {{tø|pnt|Δημοκρατίαν τη Τσεχίας}}
