t+mk:[[бриџ]] ([[WT:EDIT|Assisted]]) <bridge#18710808>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -376,6 +376,7 @@ Name of an older card game ''biritch'', probably {{etyl|ru}} {{term|бирич|l
 * Italian: {{t+|it|bridge|m}}
 {{trans-mid}}
 * Latvian: {{t-|lv|bridžs|m}}
+* Macedonian: {{t|mk|бриџ|m|tr=bridž|sc=Cyrl}}
 * Polish: {{t+|pl|brydż|m}}
 * Romanian: {{t-|ro|bridge}}
 * Russian: {{t+|ru|бридж|m|tr=bridž}}
