--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -415,7 +415,7 @@ From {{etyl|en|fi}}
 ===Noun===
 {{fi-noun}}
 
-# [[bridge#Etymology 2|bridge]] {{gloss|card-game}}
+# {{card games|lang=fi}} [[bridge#Etymology 2|bridge]]
 
 ====Declension====
 {{fi-decl-nalle|bridg|||ä}}
