--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -75,7 +75,7 @@ Or, 晶 is the sound. (?)
 ===Etymology===
 <span class="IPA">/posi/ > /ɸosi/ > /hoɕi/</span>
 
-From {{etyl|ojp|ja|sort=ほし}}.  Possibly cognate with Korean {{term|lang=ko|별|tr=byeol||star}}.
+From {{etyl|ojp|ja|sort=ほし}}. Possibly cognate with Korean {{term|lang=ko|별|tr=byeol||star}} and {{term|lang=mnc|ᡠᠰᡳᡥᠠ|tr=usiha||star}}.
 
 ===Pronunciation===
 * [[訓読み|Kun'yomi]].
