--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -434,7 +434,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * Icelandic: {{t+|is|skera}}
 * Italian: {{t+|it|tagliare}}, {{t+|it|incidere}}
 * Japanese: {{t+|ja|切る|tr=[[きる]], kiru}}, {{t+|ja|きる|tr=kiru}}
-* {{trreq|Khmer}}
+* Khmer: {{t|km|កាត់|tr=kat|sc=Khmr}}
 * Korean: {{t+|ko|끊다|tr=kkeunta|sc=Kore}}
 * Lao: {{t|lo|ຕັດ|tr= tát|sc=Laoo}}
 {{trans-mid}}
