t+mk:[[ѕида]] ([[WT:EDIT|Assisted]]) <brick#18731803>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -248,6 +248,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Czech: {{t+|cs|zdít}}
 {{trans-mid}}
 * Greek: {{t-|el|πλινθοδομώ}}
+* Macedonian: {{t|mk|ѕида|tr=dzída|sc=Cyrl}}
 {{trans-bottom}}
 {{trans-top|make into brick}}
 * Dutch: tot bakstenen [[bakken]]
