--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -38,7 +38,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Finnish: {{t+|fi|oksentaa}}
 * French: {{t+|fr|vomir}}, {{t+|fr|rendre}}, {{t+|fr|rejeter}}, {{t+|fr|dégobiller}} {{qualifier|familiar}}
 * Galician: {{t+|gl|vomitar}}
-* German: {{t|de|übergeben|alt=sich übergeben}}, {{t|de|erbrechen}}, {{t+|de|kotzen}}
+* German: {{t|de|übergeben|alt=sich übergeben}}, {{t|de|erbrechen}}, {{t+|de|kotzen}}, {{t|de|vomieren}}
 * Greek: {{t+|el|εξεμώ|tr=exemó}}, {{t-SOP|el|[[κάνω#Greek|κάνω]] [[εμετό#Greek|εμετό]]|tr=káno emetó}}, {{t+|el|ξερνώ|tr=xernó}} {{qualifier|colloquial}}
 *: Ancient: {{tø|grc|ἐμέω|tr=emeō|sc=polytonic}}, {{tø|grc|ἐξεμέω|sc=polytonic}}
 * Hebrew: {{t-|he|הקיא|tr=hekí}}
