t+roa-jer:[[moelle d'un os]] t-balance ([[WT:EDIT|Assisted]]) <bone marrow#18732581>

--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -22,10 +22,11 @@
 * French: {{t+|fr|moelle osseuse|f}},  {{t+|fr|moelle|f}}
 * German: {{t-|de|Knochenmark|n}}
 * Hungarian: {{t+|hu|csontvelő}}
-{{trans-mid}}
 * Icelandic: {{t+|is|beinmergur|m}}
+{{trans-mid}}
 * Indonesian: [[sumsum tulang]]
 * Japanese: {{t-|ja|骨髄|tr=こつずい, kotsuzui}}
+* Jèrriais: {{tø|roa-jer|moelle d'un os|f}}
 * Latin: {{t-|la|medulla ossium|f}}
 * [[Pitjantjatjara]]: {{tø|pjt|nyuṉtjuṉ}}
 * Polish: {{t-|pl|szpik kostny|m}}
