--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -98,12 +98,12 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Jèrriais: {{tø|roa-jer|bieau|m}}, {{tø|roa-jer|belle|f}}
 * Khmer: {{Khmr|[[ស្អាត]]}} (saāt), {{t+|km|ល្អ|tr=l'ɑɑ|sc=Khmr}}
 * Korean: {{qualifier|attributive}} {{t+|ko|아름다운|tr=areumdaun|sc=Kore}}, {{qualifier|predicative}} {{t+|ko|아름답다|tr=areumdapda|sc=Kore}}
-{{trans-mid}}
 * Kurdish:
 *: Sorani: {{ku-Arab|[[جوان]]}}, {{ku-Arab|[[ئێسک سووک]]}}
+{{trans-mid}}
 * Lao: {{t-|lo|ງາມ|tr=ngaam|sc=Laoo}}
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
-* Latvian: {{t-|lv|skaists}}
+* Latvian: {{t-|lv|skaists}}, {{t|lv|daiļš}}, {{t|lv|glīts}}
 * Limburgish: {{t-|li|sjoen}}
 * Lithuanian: {{t+|lt|gražus}}
 * Lojban: {{t-|jbo|melbi}}
