--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -14,7 +14,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 {{en-noun}}
 
 # Physical matter; material.
-# The [[essential]] part of anything; the most vital part.
+# The [[essential]] lifeblood essence of anything; the most vital source or part.
 # Considerable wealth or resources.
 #: ''A man of '''substance'''.''
 # [[drug|Drugs]] {{gloss|illegal narcotics}}
@@ -25,6 +25,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * [[substantial]]
 * [[substantive]]
 * [[understand]]
+*[[corporeal]] 
 
 ====Translations====
 {{trans-top|matter}}
