--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -25,7 +25,10 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * [[substantial]]
 * [[substantive]]
 * [[understand]]
-*[[corporeal]] 
+*[[corporeal]]
+*[[essence]]
+*[[quintessence]]
+*[[lifeblood]]
 
 ====Translations====
 {{trans-top|matter}}
