--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -70,12 +70,12 @@
 # {{defn|lang=cmn|sort=人09}}
 
 ===Adverb===
-{{head|cmn|adverb|sc=Hani}}{{zh-attention|needs inflection template}}
+{{head|cmn|adverb|sc=Hani}}{{attention|cmn|needs inflection template}}
 
 # [[accidentally]], [[coincidentally]]
 
 ===Noun===
-{{head|cmn|noun|sc=Hani}}{{zh-attention|needs inflection template}}
+{{head|cmn|noun|sc=Hani}}{{attention|cmn|needs inflection template}}
 
 # an [[idol]] (either a statue that is prayed to or a human celebrity with many ardent fans)
 
