--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -188,7 +188,8 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Italian: {{t+|it|curvare}}
 {{trans-mid}}
 * Korean: {{t+|ko|구부리다|tr=guburida|sc=Kore}}
-* Macedonian: {{t|mk|витка|tr=vítka|sc=Cyrl}}, {{t|mk|свиткува|tr=svítkuva|sc=Cyrl}}
+* Macedonian: {{t|mk|витка|tr=vítka|sc=Cyrl}}, {{t|mk|свиткува|tr=svítkuva|sc=Cyrl}}, {{t|mk|витка|tr=vítka|sc=Cyrl}}
+* Macedonian: {{t|mk|искривува|tr=iskrívuva|sc=Cyrl}}
 * Russian: {{t+|ru|изгибать}}, {{t+|ru|гнуть}}
 * Scottish Gaelic: {{t-|gd|crom}}, {{t-|gd|lùb}}
 * Swedish: {{t+|sv|böja}}, {{t+|sv|kröka}}
@@ -208,6 +209,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-mid}}
 * Japanese: {{t-|ja|曲がる|tr={{Jpan|[[まがる]]}}, magaru|sc=Jpan}}
 * Korean: {{t+|ko|구부러지다|tr=gubureojida|sc=Kore}}
+* Macedonian: {{t|mk|се извива|tr=se ízviva|sc=Cyrl}}
 * Russian: {{t+|ru|изгибаться|sc=Cyrl}}, {{t+|ru|гнуться|sc=Cyrl}}
 * Scottish Gaelic: {{t-|gd|lùb}}
 * Swedish: {{t+|sv|böja}} (sig)
