--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -56,6 +56,7 @@ From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|
 * Korean: {{t+|ko|코트|tr=koteu}}
 * Latin: {{t|la|pallium|n}}
 * Luhya: {{tø|luy|kumuchosi}}
+* Macedonian: {{t|mk|капут|m|tr=káput|sc=Cyrl}}
 * Malay: {{t-|ms|kot}}
 * Navajo: {{tø|nv|éétsoh}}
 * Norwegian: {{t+|no|frakk|m}}
