--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -212,6 +212,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Polish: {{t+|pl|dochodzić}}, {{t+|pl|dojść}}
 * Portuguese: {{t+|pt|gozar}}
 * Russian: {{t+|ru|кончать|tr=končát’}} {{impf}}, {{t+|ru|кончить|tr=kónčit’}} {{pf.}}
+* Serbo-Croatian: {{t|sh|svršiti}} {{qualifier|colloquial}}
 * Spanish: {{t+|es|correrse}}
 * Thai: {{t-|th|ถึงจุดสุดยอด|sc=Thai|tr=těung jùt sùt yôt}}, {{t+|th|เสร็จ|sc=Thai|tr=sèt}}
 {{trans-bottom}}
