--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -146,7 +146,7 @@ From {{etyl|dum|nl}} {{term|het|lang=dum}}, {{term|hit|lang=dum}}, from {{etyl|o
 * {{l|dum|et}}, {{l|dum|it}}
 
 ===Etymology===
-From {{etyl|odt|dum}} {{term|hit|lang=odt}}, from {{etyl|gem-pro|dum}} {{recons|hit|lang=gem-pro}}.
+From {{etyl|odt|dum}} {{term|hit|lang=odt}}, {{term|it|lang=odt}}, from {{etyl|gem-pro|dum}} {{recons|hit|lang=gem-pro}}, {{recons|it|lang=gem-pro}}.
 
 ===Pronunciation===
 * {{IPA|lang=dum|/het/}}
