/* Verb */ fmt <pull#18769906>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -44,7 +44,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 #* '''2008''' August 18, "Mark (newsgroups)" (username), "[http://groups.google.com/group/alt.games.warcraft/msg/72486e99a34604b5 Re: I'm a priest now!]", in <tt>alt.games.warcraft</tt>, Usenet:
 #*: Shield yourself, '''pull''' with Mind Blast if you want, or merely '''pull''' with SW:P to save mana, then wand, fear if you need to, but use the lowest rank fear.
 # to [[score]] a certain amount of points in a sport.
-* ''How many points did you pull today, Albert?''
+#* ''How many points did you pull today, Albert?''
 
 ====Synonyms====
 * {{sense|apply force to (something) so it comes toward}} [[drag]], [[tow]], [[tug]], [[yank]]
