t+fr:[[directement]] ([[WT:EDIT|Assisted]]) <straight#18771753>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -296,6 +296,7 @@
 {{trans-bottom}}
 
 {{trans-top|of movement or travel, directly; without pause, delay or detour}}
+* French: {{t|fr|directement}}
 * Portuguese: {{t+|pt|direto}}
 {{trans-mid}}
 {{trans-bottom}}
