Reverted edits by [[Special:Contributions/63.249.90.205|63.249.90.205]], restoring last version by [[User:Rukhabot|Rukhabot]]. If you think this rollback is in error, please leave a message on my talkpage. <坏#18773984>

--- a/en/坏/坏.13010.wikitext
+++ b/en/坏/坏.13010.wikitext
@@ -8,7 +8,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4119<sub>0</sub>|canj=土一火 (GMF)}}
 
-# [[rotten]], [[spoiled]], [[bad]], [[broken]] down
+# [[rotten]], [[spoilt]], [[bad]], [[broken]] down
 
 ====References====
 * {{Han ref|kx=0225.140|dkj=04930|dj=0460.050|hdz=10421.110|uh=574F|ud=22351|bh=A7A5|bd=42917}}
