--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -290,7 +290,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 ==Romanian==
 
 ===Pronunciation===
-* {{IPA|[ˈkur.ve]|lang=ro}}
+* {{IPA|[ˈcurbă]|lang=ro}}
 
 ===Noun===
 '''curve''' {{f|p}}
