--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -1,8 +1,7 @@
 {{also|Appendix:Variations of "ie"}}
 ==English==
 
-===Etymology===
-From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est||that is}}.
+'''etymology'''
 
 ===Pronunciation===
 * {{a|RP|US}} {{IPA|/ˌaɪˈiː/}}
