Reverted edits by [[Special:Contributions/81.107.47.209|81.107.47.209]], restoring last version by [[User:VolkovBot|VolkovBot]]. If you think this rollback is in error, please leave a message on my talkpage. <i.e.#18777290>

--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -1,7 +1,8 @@
 {{also|Appendix:Variations of "ie"}}
 ==English==
 
-'''etymology'''
+===Etymology===
+From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est||that is}}.
 
 ===Pronunciation===
 * {{a|RP|US}} {{IPA|/ˌaɪˈiː/}}
