--- a/en/坪/坪.13037.wikitext
+++ b/en/坪/坪.13037.wikitext
@@ -4,7 +4,7 @@
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4114<sub>9</sub>|canj=土一火十 (GMFJ)|ids=⿰[[土]][[平]]}}
 
 # level ground
-# Japanese and Korean measure of area
+# Japanese, Taiwanese, and Korean measure of area
 
 ====References====
 * {{Han ref|kx=0226.220|dkj=04976|dj=0461.340|hdz=10430.090|uh=576A|ud=22378|bh=A957|bd=43351}}
