--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -54,7 +54,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}}, from
 * Italian: {{t+|it|segretario|m}}
 {{trans-mid}}
 * Japanese: {{t-|ja|秘書|tr=ひしょ, hisho}}
-* Khmer: {{t|km|ស្មៀន|sc=Khmr}}
+* Khmer: {{t|km|ស្មៀន|sc=Khmr|tr=smien}}
 * Korean: {{t+|ko|비서|tr=biseo|sc=Kore}} ({{t+|ko|秘書|sc=Kore}})
 * Kurdish:
 *: Kurmanji: [[katib]], [[sekreter]]
