--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -18,13 +18,13 @@
 ====Translations====
 {{trans-top|country in Central Europe}}
 * Afrikaans: {{t-|af|Tsjeggiese Republiek}}
-* Arabic: {{t-|ar|جمهورية التشيك|f|tr=jumhuuriyyat al-tshik}}, {{t-|ar|التشيك|m|tr=al-tshik}}
+* Arabic: {{t-|ar|جمهورية التشيك|f|tr=jumhuuriyyat al-tshik|sc=Arab}}, {{t-|ar|التشيك|m|tr=al-tshik|sc=Arab}}
 * Armenian: {{t|hy|Չեխիայի Հանրապետություն|tr=Čexiayi Hanrapetut'yun|sc=Armn}}
 * Azeri: {{t-|az|Çex Respublikası}}
-* Belarusian: {{t-|be|Чэшская рэспубліка|f|tr=Čéšskaja Respúblika}}, {{t-|be|Чэхія|f|tr=Čéxija}}
-* Bengali: {{t-|bn|চেক প্রজাতন্ত্র}}
+* Belarusian: {{t-|be|Чэшская рэспубліка|f|tr=Čéšskaja Respúblika|sc=Cyrl}}, {{t-|be|Чэхія|f|tr=Čéxija|sc=Cyrl}}
+* Bengali: {{t-|bn|চেক প্রজাতন্ত্র|sc=Beng}}
 * Breton: {{t|br|Republik Tchek}}
-* Bulgarian: {{t-|bg|Чешка република|f|tr=Čéška repúblika}}, {{t+|bg|Чехия|f|tr=Čéxija}}
+* Bulgarian: {{t-|bg|Чешка република|f|tr=Čéška repúblika|sc=Cyrl}}, {{t+|bg|Чехия|f|tr=Čéxija|sc=Cyrl}}
 * Catalan: {{t|ca|República Txeca|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|捷克共和國|sc=Hani}}, {{t|cmn|捷克共和国|tr=Jiékè Gònghéguó|sc=Hani}}, {{t-|cmn|捷克|tr=Jiékè|sc=Hani}}
@@ -39,9 +39,9 @@
 * Finnish: {{t+|fi|Tšekin tasavalta}}, {{t+|fi|Tšekki}}, {{t-|fi|Tšekinmaa}}
 * French: {{t|fr|République tchèque|f}}, {{t+|fr|Tchéquie|f}}
 * German: {{t+|de|Tschechische Republik}}, {{t+|de|Tschechien|n}}, {{t+|de|Tschechei|f}}
-* Greek: {{t-|el|Δημοκρατία της Τσεχίας|f|tr=Dimokratía tis Tsechías}}, {{t+|el|Τσεχία|f|tr=Tsechía}}
-* Hebrew: {{t-|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit}}, {{t-|he|צ'כיה|f|tr=chekhia}}
-* Hindi: {{t-|hi|चेक रिपब्लिक|tr=cek ripablik}}, {{t+|hi|चेक|tr=cek}}
+* Greek: {{t-|el|Δημοκρατία της Τσεχίας|f|tr=Dimokratía tis Tsechías|sc=Grek}}, {{t+|el|Τσεχία|f|tr=Tsechía|sc=Grek}}
+* Hebrew: {{t-|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit|sc=Hebr}}, {{t-|he|צ'כיה|f|tr=chekhia|sc=Hebr}}
+* Hindi: {{t-|hi|चेक रिपब्लिक|tr=cek ripablik|sc=Deva}}, {{t+|hi|चेक|tr=cek|sc=Deva}}
 * Hungarian: {{t+|hu|Cseh Köztársaság}}
 * Icelandic: {{t+|is|Tékkland|n}}, {{t|is|Tékkneska lýðveldið|n}}
 * Interlingua: {{t|ia|Republica Chec}}
@@ -56,19 +56,19 @@
 * Latin: {{t-|la|Cechia|f}}, {{t-|la|Respublica Cecha|f}}
 * Latvian: {{t|lv|Čehijas Republika|f}}
 * Luxembourgish: {{t|lb|Tschechesch Republik}}
-* Macedonian: {{t+|mk|Чешка|f|tr=Čéška}}, {{t-|mk|Чешка Република|f|tr=Čéška Repúblika}}
+* Macedonian: {{t+|mk|Чешка|f|tr=Čéška|sc=Cyrl}}, {{t-|mk|Чешка Република|f|tr=Čéška Repúblika|sc=Cyrl}}
 * Maltese: {{t|mt|Repubblika Ċeka|alt=ir-Repubblika Ċeka}}
 * Navajo: {{tø|nv|Chek bikéyah}}
 * Norwegian: {{t+|no|Tsjekkia}}, {{t-|no|Den tsjekkiske republikk}}
 * Occitan: {{t|oc|Republica Chèca|f}}
-* Persian: {{t+|fa|جمهوری چک|tr=Jomhuri-ye Chek}}, {{t+|fa|چک|tr=Chek}}
+* Persian: {{t+|fa|جمهوری چک|tr=Jomhuri-ye Chek|sc=fa-Arab}}, {{t+|fa|چک|tr=Chek|sc=fa-Arab}}
 * Polish: {{t+|pl|Republika Czeska|f}}, {{t+|pl|Czechy|p}}
 * Pontic Greek: {{tø|pnt|Δημοκρατίαν τη Τσεχίας}}
 * Portuguese: {{t+|pt|República Tcheca}}
 * Quechua: {{t-|qu|Chiksuyu}}
 * Romanian: {{t+|ro|Republica Cehă|f}}
 * Romansch: {{t-|rm|Tschechia|f}}
-* Russian: {{t-|ru|Чешская Республика|f|tr=Čéšskaja Respúblika}}, {{t+|ru|Чехия|f|tr=Čéxija}}
+* Russian: {{t-|ru|Чешская Республика|f|tr=Čéšskaja Respúblika|sc=Cyrl}}, {{t+|ru|Чехия|f|tr=Čéxija|sc=Cyrl}}
 * Scottish Gaelic: an t-{{t-|gd|Seic|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|Чешка Република|f|sc=Cyrl}}, {{t-|sh|Чешка|f|sc=Cyrl}}
@@ -80,10 +80,10 @@
 * Spanish: {{t|es|República Checa|f}}
 * Swahili: {{t-|sw|Jamhuri ya Ucheki}}
 * Swedish: {{t+|sv|Tjeckien}}, {{t-|sv|Republiken Tjeckien}}
-* Thai: {{t+|th|สาธารณรัฐเช็ก|tr=săa-taa-rá-ná-rát chék}}, {{t-|th|เช็ก|tr=chék}}
+* Thai: {{t+|th|สาธารณรัฐเช็ก|tr=săa-taa-rá-ná-rát chék|sc=Thai}}, {{t-|th|เช็ก|tr=chék|sc=Thai}}
 * Turkish: {{t+|tr|Çek Cumhuriyeti}}
 * Turkmen: {{t-|tk|Çeh Republikasy}}
-* Ukrainian: {{t-|uk|Чеська Республіка|f|tr=Čés'ka Respúblika}}, {{t+|uk|Чехія|f|tr=Čéxija}}
+* Ukrainian: {{t-|uk|Чеська Республіка|f|tr=Čés'ka Respúblika|sc=Cyrl}}, {{t+|uk|Чехія|f|tr=Čéxija|sc=Cyrl}}
 * Uyghur: {{t-|ug|چېخ جۇمھۇرىيەتى|sc=ug-Arab}}
 * Uzbek: {{t-|uz|Chex Respublikasi}}
 * Vietnamese: {{t-|vi|Cộng hòa Séc}}, {{t-|vi|Séc}}
