--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -26,7 +26,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|spelt||spelt, corn|lang=ang}},
 ====Noun====
 {{en-noun|-}}
 
-# A grain, considered either a subspecies of [[wheat]], {{tritaxon|[[Triticum aestivum]] [[spelta]]}}, or a separate species ''[[Triticum spelta]]''.
+# A grain, considered either a subspecies of [[wheat]], {{taxlink|Triticum aestivum|species}} ''subsp. [[spelta]]'', or a separate species {{taxlink|Triticum spelta|species}}.
 
 =====See also=====
 * {{pedialite}}
