--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -8,7 +8,7 @@
 The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but has become the stressed pronunciation as well in many dialects.
 
 ===Etymology===
-From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.|en}} {{term|captio|captiare|lang=la}}, from {{etyl|la}} {{term|capto|captare|lang=la}}. Akin to [[w:French language|Modern French]] {{term|chasser|lang=fr}}, [[w:Spanish language|Spanish]] {{term|cazar|lang=es}}.
+From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|ONF.}}, from {{etyl|LL.|en}} {{term|captio|captiare|lang=la}}, from {{etyl|la}} {{term|capto|captare|lang=la}}. Akin to [[w:French language|Modern French]] {{term|chasser|lang=fr}} (whence English ''[[chase]]''), [[w:Spanish language|Spanish]] {{term|cazar|lang=es}}.
 
 ===Noun===
 {{en-noun|es|-}}
