--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -1,14 +1,14 @@
 ==English==
 
+===Etymology===
+From {{etyl|enm}} {{term|cacchen|lang=enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|ONF.}}, from {{etyl|LL.|en}} {{term|captio|captiare|lang=la}}, from {{etyl|la}} {{term|capto|captare|lang=la}}. Akin to [[w:French language|Modern French]] {{term|chasser|lang=fr}} (from Old French {{term|chacier|lang=fro}}, whence English ''[[chase]]''), [[w:Spanish language|Spanish]] {{term|cazar|lang=es}}.
+
 ===Pronunciation===
 * {{enPR|kăch}}, {{IPA|/kætʃ/|/kɛtʃ/}}, {{X-SAMPA|/k{tS/|/kEtS/}}
 * {{audio|en-us-catch.ogg|Audio (US)}}
 * {{rhymes|ætʃ}}, {{rhymes|ɛtʃ}}
 
 The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but has become the stressed pronunciation as well in many dialects.
-
-===Etymology===
-From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|ONF.}}, from {{etyl|LL.|en}} {{term|captio|captiare|lang=la}}, from {{etyl|la}} {{term|capto|captare|lang=la}}. Akin to [[w:French language|Modern French]] {{term|chasser|lang=fr}} (from Old French {{term|chacier|lang=fro}}, whence English ''[[chase]]''), [[w:Spanish language|Spanish]] {{term|cazar|lang=es}}.
 
 ===Noun===
 {{en-noun|es|-}}
