--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -95,6 +95,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 
 ===Noun===
 {{en-noun}}
+[[File:Max-cut.svg|thumb|A '''cut''' (15) in a graph with five vertices, which partitioned it into two subgroups (one with white vertices and another with black vertices).]]
 
 # An opening resulting from cutting.
 #: ''Look at this '''cut''' on my finger!''
@@ -117,6 +118,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 #: ''The drummer on the last '''cut''' of their CD is not identified.''
 # {{archaeology}} A [[truncation]], a context that represents a moment in time when other archaeological [[deposit]]s were removed for the creation of some feature such as a [[ditch]] or [[pit]].
 # A [[haircut]].
+# {{graph theory|lang=en}} the [[partition]] of a [[graph]]’s [[vertex|vertices]] into two subgroups
 
 ====Derived terms====
 {{rel-top3|Terms derived from ''cut'' (noun)}}
@@ -128,6 +130,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * [[budget cut]]
 * [[crew cut]]
 * [[cut of one's jib]]
+* [[cut-set]]
 {{rel-mid3}}
 * [[direct cut]]
 * [[director's cut]]
@@ -137,6 +140,8 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * [[jump cut]]/[[jump-cut]]
 * [[line cut]]
 * [[make the cut]]
+* [[maximum cut]]
+* [[minimum cut]]
 {{rel-mid3}}
 * [[pay cut]]
 * [[power cut]]
@@ -145,6 +150,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * [[rose cut]]
 * [[shaggy cut]]
 * [[shortcut]]
+* [[s-t cut]]
 * [[tax cut]]
 {{rel-bottom}}
 
@@ -271,6 +277,11 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 {{trans-bottom}}
 
 {{trans-top|deliberate snub}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|partition of a graph’s vertices into two subgroups}}
+* Portuguese: {{t|pt|corte|m}}
 {{trans-mid}}
 {{trans-bottom}}
 
