--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -152,6 +152,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * [[shortcut]]
 * [[s-t cut]]
 * [[tax cut]]
+* [[α-cut]]
 {{rel-bottom}}
 
 ====Translations====
