--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -453,6 +453,7 @@
 {{trans-mid}}
 * Lithuanian: {{t+|lt|žaisti}}
 * Macedonian: {{t-|mk|игра|tr=ígra}}
+* Neapolitan: {{tø|nap|jucà}}
 * Pashto: {{t-|ps|لوبه كول|tr=loba kawəl|sc=ps-Arab}}
 * Polish: [[grać]] w
 * Portuguese: {{t+|pt|jogar}}
