t+roa-jer:[[beurrer]] t-balance ([[WT:EDIT|Assisted]]) <butter#18862116>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -326,8 +326,9 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * German: {{l|de|mit}} {{t|de|Butter}} {{t|de|bestreichen}}
 * Interlingua: {{t|ia|butyrar}}
 * Italian: {{t+|it|imburrare}}
-* Polish: {{t|pl|smarować masłem}}
+* Jèrriais: {{tø|roa-jer|beurrer}}
 {{trans-mid}}
+* Polish: {{t|pl|smarować masłem}}
 * Portuguese: {{t|pt|amanteigar}}, {{t|pt|passar manteiga em}}
 * Russian: {{t|ru|намаслить|tr=namáslit’|sc=Cyrl}}, {{t|ru|намасливать|tr=namáslivat’|sc=Cyrl}}, {{t|ru|намазать маслом|tr=namázat’ máslom|sc=Cyrl}}, {{t|ru|намазывать маслом|tr=namázyvat’ máslom|sc=Cyrl}}
 * Slovene: {{t|sl|namazati z maslom}}
