--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -228,6 +228,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Irish: {{t+|ga|im|m}}
 * Italian: {{t+|it|burro|m}}
 * Japanese: {{t+|ja|バター|tr=batā}}, {{t+|ja|乳酪|tr=[[にゅうらく]], nyūraku}}
+* Jèrriais: {{t|roa-jer|beurre|m}}
 * {{trreq|kn}}
 * Kazakh: {{t|kk|май|tr=may|sc=Cyrl}}
 * Khmer: {{t-|km|បឺរ|tr=bər|sc=Khmr}}, {{t-|km|ខ្លាញ់ទឹកដោះ|tr=klañ tɨk dɑh|sc=Khmr}}
