t+roa-jer:[[frip'sie]] t-balance ([[WT:EDIT|Assisted]]) <fight#18866583>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -273,8 +273,8 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Hungarian: {{t+|hu|küzdelem}}
 * Icelandic: {{t-|is|slagur|m}}, {{t-|is|bardagi|m}}
 * Italian: {{t+|it|lotta|f}}, {{t+|it|incontro|m}}
-* Jèrriais: {{tø|roa-jer|bastaude|f}}
 {{trans-mid}}
+* Jèrriais: {{tø|roa-jer|bastaude|f}}, {{tø|roa-jer|frip'sie|f}}
 * Kurdish:
 *: Sorani: {{t|ku|شه‌ڕ|tr=shaR|sc=ku-Arab}}
 * Latin: {{t+|la|pugna}}
