t+roa-jer:[[coper]] t-balance ([[WT:EDIT|Assisted]]) <cut#18870538>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -446,10 +446,11 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * Icelandic: {{t+|is|skera}}
 * Italian: {{t+|it|tagliare}}, {{t+|it|incidere}}
 * Japanese: {{t+|ja|切る|tr=[[きる]], kiru}}, {{t+|ja|きる|tr=kiru}}
+* Jèrriais: {{tø|roa-jer|coper}}
 * Khmer: {{t|km|កាត់|tr=kat|sc=Khmr}}
 * Korean: {{t+|ko|끊다|tr=kkeunta|sc=Kore}}
-* Lao: {{t|lo|ຕັດ|tr= tát|sc=Laoo}}
 {{trans-mid}}
+* Lao: {{t|lo|ຕັດ|tr= tát|sc=Laoo}}
 * Latin: {{t-|la|inseco}}, {{t-|la|incido}}
 * Macedonian: {{t|mk|сече|tr=séče|sc=Cyrl}}, {{t|mk|реже|tr=réže|sc=Cyrl}}
 * Neapolitan: {{tø|nap|taglià}}
@@ -503,6 +504,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * Irish: {{t-|ga|bain}} {{qualifier|grass, hay, etc.}}
 * Italian: {{t+|it|tagliare}}
 * Japanese: {{t+|ja|切る|tr=[[きる]], kiru}}, {{t+|ja|きる|tr=kiru}}
+* Jèrriais: {{tø|roa-jer|coper}}
 * Latin: {{t-|la|seco}}, {{t-|la|interseco}}, {{t-|la|curto}}
 * Portuguese: {{t+|pt|cortar}}
 * Romanian: {{t-|ro|tăia}}
