--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -58,11 +58,14 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 {{trans-top|hardened block used for building}}
 * Afrikaans: {{t-|af|baksteen}}
 * Akkadian: {{tø|akk|𒋞|tr=libittu, SIG<sub>4</sub>|sc=Xsux}}
+* {{trreq|Albanian}}
 * Arabic: {{t-|ar|طوبة|f|tr=ṭūba|sc=Arab}}, {{t-|ar|لبنة|f|tr=lábina|sc=Arab}}, {{t-|ar|قرميد|m|tr=qarmīn|sc=Arab}}
 * Armenian: {{t-|hy|աղյուս|tr=aġyus|sc=Armn}}
 * Asturian: {{t-|ast|lladriyu|m}}
+* {{trreq|Azeri}}
 * Basque: {{t-|eu|adreilu}}
 * Belarusian: {{t-|be|цэгла|f|tr=céhla|sc=Cyrl}}
+* {{trreq|Breton}}
 * Bulgarian: {{t+|bg|тухла|f|tr=túhla|sc=Cyrl}}
 * Catalan: {{t-|ca|maó|m}}
 * Chinese:
@@ -73,13 +76,16 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Dutch Low Saxon: {{tø|nds-nl|keie}}
 * Esperanto: {{t-|eo|briko}}
 * Estonian: {{t-|et|tellis}}
+* {{trreq|Faroese}}
 * Finnish: {{t+|fi|tiili}}
 * French: {{t+|fr|brique}}
+* {{trreq|Friulian}}
 * Galician: {{t+|gl|ladrillo|m}}
 * Georgian: {{t-|ka|აგჟრი|tr=agžri|sc=Geor}}, {{t-|ka|აგური|tr=aguri|sc=Geor}}
 * German: {{t+|de|Backstein}}, {{t+|de|Ziegel|m}}
 * Greek: {{t+|el|τούβλο|n|tr=toúvlo|sc=Grek}}
 * Hebrew: {{t+|he|לבנה|f|tr=l'véna|sc=Hebr}}
+* {{trreq|Hindi}}
 * Hungarian: {{t+|hu|tégla}}
 * Icelandic: {{t+|is|múrsteinn|m}}, {{t-|is|tígulsteinn|m}} {{qualifier|rare}}, {{t-|is|leirsteinn|m}} {{qualifier|rare}}
 * Ido: {{t+|io|briko}}
@@ -88,6 +94,8 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Italian: {{t+|it|mattone}}
 * Japanese: {{t-|ja|煉瓦|tr=れんが, renga}}, {{t+|ja|れんが|tr=renga|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|brique|f}}
+* {{trreq|Kannada}}
+* {{trreq|Korean}}
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t-|ku|خشت|tr=xisht|sc=ku-Arab}}
@@ -95,33 +103,40 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Latvian: {{t+|lv|ķieģelis|m}}
 * Limburgish: {{t-|li|briek}}
 * Lithuanian: {{t-|lt|plyta}}
+* {{trreq|Luxembourgish}}
 * Macedonian: {{t|mk|цигла|f|tr=cígla|sc=Cyrl}}, {{t|mk|тула|f|tr=túla|sc=Cyrl}}
 * Malay: {{t-|ms|batu bata}}
 * Norwegian:
 *: Bokmål: {{t-|nb|murstein|m}}
 *: Nynorsk: {{t-|nn|murstein|m}}
 * Occitan: {{t-|oc|brica|f}}
+* {{trreq|Pashto}}
 * Persian: {{t+|fa|آجر|tr=âjor|sc=fa-Arab}}
 * Polish: {{t+|pl|cegła}}
 * Portuguese: {{t+|pt|tijolo|m}}
 * Quechua: {{t-|qu|kusasqa tika}}
 * Romanian: {{t+|ro|cărămidă}}
+* {{trreq|Romansch}}
 * Russian: {{t+|ru|кирпич|m|tr=kirpíč|alt=кирпи́ч|sc=Cyrl}}
 * Scottish Gaelic: {{t-|gd|breig}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|цигла|f}}, {{t-|sh|опека|sc=Cyrl}}
 *: Roman: {{t-|sh|cigla}}, {{t-|sh|opeka}}
+* {{trreq|Sicilian}}
 * Slovak: {{t-|sk|tehla|f}}
 * Slovene: {{t+|sl|opeka|f}}, {{t-|sl|zidak|m}}
 * Spanish: {{t+|es|ladrillo|m}}
 * Swedish: {{t+|sv|tegel|n}}, {{t-|sv|tegelsten}}
 * Tamil: {{t+|ta|செங்கல்|sc=Taml}}
+* {{trreq|Telugu}}
 * Thai: {{t-|th|อิฐ|tr=ìt|sc=Thai}}
 * Turkish: {{t+|tr|tuğla}}
 * Ukrainian: {{t+|uk|цегла|f|tr=céhla|sc=Cyrl}}
 * Vietnamese: {{t+|vi|gạch}}
 * Volapük: {{t+|vo|bakaston}}
 * Walloon: {{t-|wa|brike}}
+* {{trreq|Welsh}}
+* {{trreq|Yiddish}}
 {{trans-bottom}}
 
 {{trans-top|a building material}}
