--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -84,6 +84,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Georgian: {{t-|ka|აგჟრი|tr=agžri|sc=Geor}}, {{t-|ka|აგური|tr=aguri|sc=Geor}}
 * German: {{t+|de|Backstein}}, {{t+|de|Ziegel|m}}
 * Greek: {{t+|el|τούβλο|n|tr=toúvlo|sc=Grek}}
+* {{trreq|Gujarati}}
 * Hebrew: {{t+|he|לבנה|f|tr=l'véna|sc=Hebr}}
 * {{trreq|Hindi}}
 * Hungarian: {{t+|hu|tégla}}
@@ -95,6 +96,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Japanese: {{t-|ja|煉瓦|tr=れんが, renga}}, {{t+|ja|れんが|tr=renga|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|brique|f}}
 * {{trreq|Kannada}}
+* {{trreq|Khmer}}
 * {{trreq|Korean}}
 {{trans-mid}}
 * Kurdish:
@@ -109,7 +111,9 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Norwegian:
 *: Bokmål: {{t-|nb|murstein|m}}
 *: Nynorsk: {{t-|nn|murstein|m}}
+* {{trreq|Novial}}
 * Occitan: {{t-|oc|brica|f}}
+* {{trreq|Oriya}}
 * {{trreq|Pashto}}
 * Persian: {{t+|fa|آجر|tr=âjor|sc=fa-Arab}}
 * Polish: {{t+|pl|cegła}}
