--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -148,14 +148,16 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Armenian: {{t-|hy|աղյուս|tr=aġyus|sc=Armn}}
 * Asturian: {{t-|ast|lladriyu|m}}
 * Bulgarian: {{t+|bg|тухли|p|sc=Cyrl}}
+* {{trreq|Catalan}}
 * Chinese:
 *: Mandarin: {{t|cmn|磚塊|sc=Hani}}, {{t|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t|cmn|磚頭|sc=Hani}}, {{t|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Czech: {{t+|cs|cihla}}
 * Danish: {{t+|da|mursten|c}}
 * Dutch: {{t+|nl|baksteen}}, {{t+|nl|bakstenen}}
 * Finnish: {{t+|fi|tiili}}
-{{trans-mid}}
 * French: {{t+|fr|brique}}
+{{trans-mid}}
+* {{trreq|Galician}}
 * German: {{t+|de|Ziegel|m}}
 * Greek: {{t+|el|τούβλο|n|tr=toúvlo|sc=Grek}}
 * Icelandic: {{t+|is|múrsteinn|m}}, {{t-|is|byggingarklossar|m|p}}, {{t-|is|byggingarkubbar|n|p}}
