t+km:[[ឥដ្ឋ]] ([[WT:EDIT|Assisted]]) <brick#18878481>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -96,7 +96,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Japanese: {{t-|ja|煉瓦|tr=れんが, renga}}, {{t+|ja|れんが|tr=renga|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|brique|f}}
 * {{trreq|Kannada}}
-* {{trreq|Khmer}}
+* Khmer: {{t|km|ឥដ្ឋ|tr=ət|sc=Khmr}}
 * {{trreq|Korean}}
 {{trans-mid}}
 * Kurdish:
