--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -152,6 +152,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * Vilamovian: {{tø|wym|Daojćłaond}}
 * Volapük: {{t+|vo|Deutän}}, {{qualifier|obsolete}} {{t-|vo|Deut}}
 * Võro: [[S'aksamaa]]
+* {{trreq|Walloon}}
 * Welsh: {{t+|cy|Almaen|f}}
 * West Frisian: {{t+|fy|Dútslân|n}}
 * Xhosa: {{t|xh|iJamani|c5}}
