--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -85,7 +85,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * Latvian: {{t+|lv|Vācija|f}}
 * {{trreq|lij}}
 * Lithuanian: {{t+|lt|Vokietija|f}}
-* Livonian: [[Saksāmō]]
+* Livonian: {{t|liv|Saksāmō}}
 * Low German: {{t+|nds|Düütschland|n}}, {{t+|nds|Düüdschland|n}}
 * Luhya: {{tø|luy|Jamani}}
 * Luxembourgish: {{t+|lb|Däitschland|n}}
@@ -152,7 +152,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * Vilamovian: {{tø|wym|Daojćłaond}}
 * Volapük: {{t+|vo|Deutän}}, {{qualifier|obsolete}} {{t-|vo|Deut}}
 * Võro: [[S'aksamaa]]
-* {{trreq|Walloon}}
+* {{trreq|wa}}
 * Welsh: {{t+|cy|Almaen|f}}
 * West Frisian: {{t+|fy|Dútslân|n}}
 * Xhosa: {{t|xh|iJamani|c5}}
