--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -187,7 +187,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{etyl|gem-pro|en}} {{
 * Luxembourgish: {{t-|lb|Promm|f}}, {{t-|lb|Praum|f}}
 * Macedonian: {{t-|mk|слива|f|tr=slíva}}
 * Manx: {{t-|gv|plumbis|m}}
-* Middle High German: {{tø|enm|pflume|alt=pflūme}}, {{tø|enm|pfrume|alt=pfrūme}}
+* Middle High German: {{tø|gmh|pflume|alt=pflūme}}, {{tø|gmh|pfrume|alt=pfrūme}}
 * Navajo: {{tø|nv|chʼil naʼatłʼoʼiitsoh}}
 * Old English: {{t-|ang|plume|f|alt=plūme}}
 * Old High German: {{tø|goh|pfruma|alt=pfrūma}}
