t+ga:[[ológ]] t-balance ([[WT:EDIT|Assisted]]) <olive#18932839>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -69,11 +69,11 @@
 * Hebrew: {{t+|he|זית|tr=zait}}
 * Hindi: {{t-|hi|ज़ैतून|tr=zaitūn}}
 * Hungarian: {{t|hu|olajbogyó}}
-* Icelandic: {{t+|is|ólífa|f}}
 {{trans-mid}}
+* Icelandic: {{t+|is|ólífa|f}}
 * Ido: {{t+|io|olivo}}
 * Indonesian: {{t+|id|zaitun}}
-* {{trreq|ga}}
+* Irish: {{t|ga|ológ|f}}
 * Italian: {{t+|it|oliva|m}}
 * Japanese: {{t-|ja|オリーブ|tr=orību}}
 * Khmer: {{t|km|ផ្លែអូលីវ|tr=plae ooliiv|sc=Khmr}}
