/* Derived terms */ * [[overpull]] <pull#18934662>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -60,6 +60,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 ====Derived terms====
 ''See also'' '''[[pulling]]'''<!--as "pulling power"-->
 {{rel-top3|Terms derived from ''pull'' (verb)}}
+* [[overpull]]
 * [[pull a|pull a...]]
 * [[pull about]]
 * [[pull a face]]
