t+nv:[[abid]] t-balance ([[WT:EDIT|Assisted]]) <stomach#18935772>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -201,8 +201,8 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Korean: {{t+|ko|배|tr=bae|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|زگ|tr=zig|sc=ku-Arab}}, {{t|ku|ورگ|tr=wirg|sc=ku-Arab}}
-{{trans-mid}}
 * Kyrgyz: {{t-|ky|карын|tr=qarın|sc=Cyrl}}
+{{trans-mid}}
 * Latgalian: {{tø|ltg|vādars|m}}
 * Latvian: {{t+|lv|vēders|m}}
 * Lithuanian: {{t-|lt|pilvas|m}}
@@ -210,6 +210,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Macedonian: {{t-|mk|стомак|m|tr=stómak}}, {{t-|mk|мев|m|tr=mev}}
 * Malay: {{t-|ms|perut}}
 * Maltese: {{t+|mt|żaqq|f}}
+* Navajo: {{tø|nv|abid}}
 * Norwegian: {{t+|no|mage|m}}, {{t+|no|buk|m}}
 * Persian: {{t+|fa|شکم|tr=šekam|sc=fa-Arab}}
 * Polish: {{t+|pl|brzuch|m}}
