t+grc:[[ἐλαία]] ([[WT:EDIT|Assisted]]) <olive#18940739>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -64,6 +64,7 @@
 * Georgian: {{t-|ka|ზეთისხილი|tr=zet'isxili|sc=Geor}}
 * German: {{t+|de|Olive|f}}
 * Greek: {{t+|el|ελιά|f|tr=eliá}}
+*: Ancient: {{tø|grc|ἐλαία|f|tr=elaiā|sc=polytonic}}
 * {{trreq|gu}}
 * Hausa: {{t-|ha|zaitun}}
 * Hebrew: {{t+|he|זית|tr=zait}}
