t+roa-jer:[[freûler]] t-balance ([[WT:EDIT|Assisted]]) <fight#18942992>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -71,9 +71,10 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * Icelandic: {{t+|is|slást}}, {{t+|is|berjast}}
 * Italian: {{t+|it|lottare}}, {{t+|it|azzuffarsi}}, {{t-|it|battersi}}
 * Japanese: {{t+|ja|喧嘩|tr=けんかする, kenka-suru|sc=Jpan|alt=喧嘩する}}, {{t-|ja|対決|tr=たいけつする, taiketsu-suru|sc=Jpan|alt=対決する}}, {{t-|ja|戦う|tr=たたかう, tatakau|sc=Jpan}} / {{t-|ja|闘う|tr=たたかう, tatakau|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|freûler|alt=s'freûler}}
 * Khmer: {{t-|km|វាយតប់|tr=wīē-dtop|sc=Khmr}}
-* Korean: {{t+|ko|다투다|tr=datuda|sc=Kore}}, {{t+|ko|싸우다|tr=ssauda|sc=Kore}}
 {{trans-mid}}
+* Korean: {{t+|ko|다투다|tr=datuda|sc=Kore}}, {{t+|ko|싸우다|tr=ssauda|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|شه‌ڕ کردن|tr=shaR kirdin|sc=ku-Arab}}
 * Lao: {{t-|lo|ຕໍ່ສູ້|tr=töö-suu|sc=Laoo}}, {{t-|lo|ຮົບ|tr=hop|sc=Laoo}}
