--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -238,7 +238,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Kurdish:
 *: Sorani: {{t+|ku|که‌ره‌|sc=ku-Arab}}
 {{trans-mid}}
-* Kyrgyz: {{t-|ky|май|tr=may|sc=Cyrl}}
+* Kyrgyz: {{t-|ky|май}} {{t-|ky| сары май}} {{t-|ky|сүт май}}{{t-|ky|паста}} {{t-|ky|повидло}} {{t-|ky|май сүйкөө}}
 * Lao: {{t+|lo|ເບີ|tr=bəə|sc=Laoo}}
 * Latgalian: {{tø|ltg|svīsts}}
 * Latin: {{t-|la|butyrum}}
@@ -406,6 +406,7 @@ From {{term|butte|lang=fr}}.
 [[it:butter]]
 [[kn:butter]]
 [[kk:butter]]
+[[ky:butter]]
 [[sw:butter]]
 [[ku:butter]]
 [[lo:butter]]
