--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -171,6 +171,13 @@ From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to
 # {{transitive}} To use a float (tool).
 #: ''It is time to '''float''' this horse's teeth.''
 # {{poker}} To perform a [[float#Noun|float]].
+# {{crosstoplay}} To perform a [[float#Noun|float]].
+Idea of thought in behaviour of a male gender resembles characteristics of some other species to program self of a variable in equation as self in var x
+..
+Float when act on impulse using var x and wondering while flying over your targets everyday yet float
+..
+Float in fluid manner like an eagle & get what you want when you want
+
 
 ====Derived terms====
 * [[float someone's boat]]
