--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -338,7 +338,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 # {{transitive|slang}} To [[wound]] with a knife.
 #* '''1990''', Stephen Dobyns, ''The house on Alexandrine''
 #*: We don't want your money no more. We just going to '''cut''' you.
-# {{rfdef|lang=en}}
+# {{transitive}} To exhibit a quality
 #* {{quote-news
 |year=2011
 |date=January 25
