/* Synonyms */ + checksyns <suck#19020278>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -27,6 +27,7 @@
 #*: . . . and it has a few very high points . . . but as a novel, it '''sucks'''
 
 ====Synonyms====
+{{checksyns}}
 * To [[draw]]
 * To [[attract]]
 * (3, 4 above) To [[blow]]
