t+ca:[[maó]] ([[WT:EDIT|Assisted]]) <brick#19026212>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -148,7 +148,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Armenian: {{t-|hy|աղյուս|tr=aġyus|sc=Armn}}
 * Asturian: {{t-|ast|lladriyu|m}}
 * Bulgarian: {{t+|bg|тухли|p|sc=Cyrl}}
-* {{trreq|Catalan}}
+* Catalan: {{t|ca|maó|m}}
 * Chinese:
 *: Mandarin: {{t|cmn|磚塊|sc=Hani}}, {{t|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t|cmn|磚頭|sc=Hani}}, {{t|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Czech: {{t+|cs|cihla}}
