--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -7,9 +7,10 @@
 {{etyl|fro}} {{term|olive|lang=fro||olive, olive tree}}, from {{etyl|la}} {{term|oliva|olīva|lang=la|olive}}, from {{etyl|grc}} {{term|ἐλαία|sc=polytonic|tr=elaía|lang=grc}}, from {{etyl|ine-pro|en}} {{recons|loiu̯om|lang=ine-pro}} (compare [[Old Church Slavonic]] {{term|lojŭ||tallow}}, {{etyl|xcl}} {{term|իւղ|եւղ|tr=ewł|lang=xcl|oil}}).<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref>{{rfscript|Cyrillic}}
 
 ===Pronunciation===
-* {{enPR|ŏ'lĭv}}, {{IPA|/ˈɒlɪv/}}, {{X-SAMPA|/"QlIv/}}
-* {{audio|en-uk-olive.ogg|Audio (UK)}}
-* {{audio|en-us-olive.ogg|Audio (US)}}
+* {{enPR|ŏ'lĭv}}, {{IPA|/ˈɒlɪv/|lang=en}}, {{X-SAMPA|/"QlIv/}}
+* {{audio|En-uk-olive.ogg|Audio (UK)}}
+* {{enPR|ä'lĭv}}, {{IPA|/ˈɑlɪv/|lang=en}}, {{X-SAMPA|/"AlIv/}}
+* {{audio|En-us-olive.ogg|Audio (US)}}
 
 ===Noun===
 {{en-noun}}
