Added Turkish entry <port#19028191>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -581,6 +581,18 @@ From late {{etyl|non|sv}} {{term|port|lang=non}} {{n}}, {{term|portr|lang=non}} 
 * [[portkod]]
 * [[porta]]
 
+----
+
+==Turkish==
+
+===Noun===
+{{tr-noun|u|lar}}
+
+# {{computing|hardware|networking|lang=tr}} [[#English|port]]
+
+====Declension====
+{{tr-noun-c|u|t|pred=-|poss=+}}
+
 [[am:port]]
 [[ast:port]]
 [[ca:port]]
